--- a/apk/res/values-fa/strings.xml
+++ b/apk/res/values-fa/strings.xml
@@ -276,6 +276,12 @@
     <string name="allergy_intolerance_uppercase_label" msgid="962905760867412783">"حساسیت‌ها"</string>
     <string name="allergy_intolerance_lowercase_label" msgid="8705895234297776508">"حساسیت‌ها"</string>
     <string name="allergy_intolerance_content_description" msgid="5938549394285540206">"خواندن حساسیت‌ها"</string>
+    <!-- no translation found for conditions_uppercase_label (5260404343402770877) -->
+    <skip />
+    <!-- no translation found for conditions_lowercase_label (2678248918552246997) -->
+    <skip />
+    <!-- no translation found for conditions_content_description (3230552343616193829) -->
+    <skip />
     <string name="immunization_uppercase_label" msgid="1467176749064014020">"ایمن‌سازی"</string>
     <string name="immunization_lowercase_label" msgid="6464922369026887687">"ایمن‌سازی"</string>
     <string name="immunization_content_description" msgid="2910674919337229803">"خواندن وضعیت ایمن‌سازی"</string>
@@ -285,18 +291,33 @@
     <string name="medications_uppercase_label" msgid="4783281053427990225">"داروها"</string>
     <string name="medications_lowercase_label" msgid="7808038774503092207">"داروها"</string>
     <string name="medications_content_description" msgid="6165382876281780190">"خواندن داروها"</string>
+    <!-- no translation found for personal_details_uppercase_label (7241635933310394120) -->
+    <skip />
+    <!-- no translation found for personal_details_lowercase_label (1907848447611775151) -->
+    <skip />
+    <!-- no translation found for personal_details_content_description (3191211304673909831) -->
+    <skip />
+    <!-- no translation found for practitioner_details_uppercase_label (2940667649808082510) -->
+    <skip />
+    <!-- no translation found for practitioner_details_lowercase_label (8195591077717971542) -->
+    <skip />
+    <!-- no translation found for practitioner_details_content_description (8775396516928504185) -->
+    <skip />
     <string name="pregnancy_uppercase_label" msgid="5979925175194337864">"بارداری"</string>
     <string name="pregnancy_lowercase_label" msgid="810439290131044517">"بارداری"</string>
     <string name="pregnancy_content_description" msgid="3436773729243586287">"خواندن داده‌های بارداری"</string>
-    <string name="problems_uppercase_label" msgid="4047882613795113715">"مشکلات"</string>
-    <string name="problems_lowercase_label" msgid="6934298611508910866">"مشکلات"</string>
-    <string name="problems_content_description" msgid="1549418294742668962">"خواندن مشکلات"</string>
     <string name="procedures_uppercase_label" msgid="9176087520132593261">"اقدامات درمانی"</string>
     <string name="procedures_lowercase_label" msgid="5320804313946273234">"اقدامات درمانی"</string>
     <string name="procedures_content_description" msgid="1086900373141440005">"خواندن اقدامات درمانی"</string>
     <string name="social_history_uppercase_label" msgid="1731364502071035544">"سابقه اجتماعی"</string>
     <string name="social_history_lowercase_label" msgid="9027541979445736412">"سابقه اجتماعی"</string>
     <string name="social_history_content_description" msgid="7187059309389849831">"خواندن سابقه اجتماعی"</string>
+    <!-- no translation found for visits_uppercase_label (8532619758336375886) -->
+    <skip />
+    <!-- no translation found for visits_lowercase_label (2545887061364564151) -->
+    <skip />
+    <!-- no translation found for visits_content_description (6336796415049565697) -->
+    <skip />
     <string name="vital_signs_uppercase_label" msgid="214938594708280346">"علائم حیاتی"</string>
     <string name="vital_signs_lowercase_label" msgid="9141304492316454529">"علائم حیاتی"</string>
     <string name="vital_signs_content_description" msgid="914944352640528612">"خواندن علائم حیاتی"</string>
@@ -338,6 +359,8 @@
     <string name="default_error" msgid="7966868260616403475">"مشکلی پیش آمد. لطفاً دوباره امتحان کنید."</string>
     <!-- no translation found for unkwown_resource (7932225227431922125) -->
     <skip />
+    <!-- no translation found for raw_fhir_title (1295744907036066319) -->
+    <skip />
     <!-- no translation found for raw_fhir_open_bracket (7974657451368655325) -->
     <skip />
     <!-- no translation found for raw_fhir_closed_bracket (9084379463440675078) -->
@@ -358,7 +381,7 @@
     <string name="manage_permissions_read_header" msgid="2031153753057983683">"مجاز به خواندن"</string>
     <string name="manage_permissions_write_header" msgid="6876806848658168370">"مجاز به نوشتن"</string>
     <string name="no_apps_allowed" msgid="5794833581324128108">"برنامه‌ای مجاز نشده"</string>
-    <string name="no_apps_denied" msgid="743327680286446017">"برنامه‌ای غیرمجاز نشده"</string>
+    <string name="no_apps_denied" msgid="743327680286446017">"برنامه‌ای رد نشده"</string>
     <string name="permissions_disconnect_all_dialog_title" msgid="27474286046207122">"دسترسی همه برنامه‌ها برداشته شود؟"</string>
     <string name="permissions_disconnect_all_dialog_message" msgid="3151109627457270499">"هیچ‌یک از برنامه‌هایتان دیگر نمی‌تواند به Health Connect دسترسی داشته باشد یا داده‌های جدید به آن اضافه کند. این موضوع باعث حذف داده‌های موجود نمی‌شود.\n\nاین تنظیم بر دیگر اجازه‌هایی که این برنامه ممکن است داشته باشد (مثلاً مکان، دوربین، یا میکروفون) اثر نمی‌گذارد."</string>
     <string name="permissions_disconnect_all_dialog_disconnect" msgid="2134136493310257746">"برداشتن همه موارد"</string>
@@ -475,6 +498,10 @@
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"رفتن به فروشگاه Play"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"شروع کار با Health Connect"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"‏Health Connect داده‌های سلامتی و تناسب اندام شما را ذخیره می‌کند و روشی ساده برای همگام‌سازی برنامه‌های مختلف دستگاه دراختیارتان می‌گذارد"</string>
+    <!-- no translation found for onboarding_description_health_records (6816666836571797870) -->
+    <skip />
+    <!-- no translation found for onboarding_description_with_health_connect (8751881078749676542) -->
+    <skip />
     <string name="share_data" msgid="3481932156368883946">"هم‌رسانی داده‌ها با برنامه‌ها"</string>
     <string name="share_data_description" msgid="2919871301634375092">"می‌توانید داده‌هایی را که هر برنامه اجازه دارد در Health Connect بخواند یا بنویسد انتخاب کنید"</string>
     <string name="manage_your_settings" msgid="7391184508015127137">"مدیریت تنظیمات و حریم خصوصی"</string>
