--- a/apk/res/values-as/strings.xml
+++ b/apk/res/values-as/strings.xml
@@ -276,30 +276,48 @@
     <string name="allergy_intolerance_uppercase_label" msgid="962905760867412783">"এলাৰ্জি"</string>
     <string name="allergy_intolerance_lowercase_label" msgid="8705895234297776508">"এলাৰ্জি"</string>
     <string name="allergy_intolerance_content_description" msgid="5938549394285540206">"এলাৰ্জি সম্পৰ্কীয় ডেটা পঢ়ক"</string>
+    <!-- no translation found for conditions_uppercase_label (5260404343402770877) -->
+    <skip />
+    <!-- no translation found for conditions_lowercase_label (2678248918552246997) -->
+    <skip />
+    <!-- no translation found for conditions_content_description (3230552343616193829) -->
+    <skip />
     <string name="immunization_uppercase_label" msgid="1467176749064014020">"প্ৰতিষেধক"</string>
     <string name="immunization_lowercase_label" msgid="6464922369026887687">"প্ৰতিষেধক"</string>
     <string name="immunization_content_description" msgid="2910674919337229803">"প্ৰতিষেধক প্ৰদান সম্পৰ্কীয় তথ্য পঢ়ক"</string>
     <string name="laboratory_results_uppercase_label" msgid="2521886562709901654">"ব্যৱহাৰকাৰীৰ পৰীক্ষাগাৰৰ ফলাফল"</string>
     <string name="laboratory_results_lowercase_label" msgid="6437932041744631964">"ব্যৱহাৰকাৰীৰ পৰীক্ষাগাৰৰ ফলাফল"</string>
     <string name="laboratory_results_content_description" msgid="5882338877203692484">"ব্যৱহাৰকাৰীৰ পৰীক্ষাগাৰৰ ফলাফল পঢ়ক"</string>
-    <!-- no translation found for medications_uppercase_label (4783281053427990225) -->
+    <string name="medications_uppercase_label" msgid="4783281053427990225">"ঔষধ"</string>
+    <string name="medications_lowercase_label" msgid="7808038774503092207">"ঔষধ"</string>
+    <string name="medications_content_description" msgid="6165382876281780190">"ঔষধ সম্পৰ্কীয় ডেটা পঢ়ক"</string>
+    <!-- no translation found for personal_details_uppercase_label (7241635933310394120) -->
     <skip />
-    <!-- no translation found for medications_lowercase_label (7808038774503092207) -->
+    <!-- no translation found for personal_details_lowercase_label (1907848447611775151) -->
     <skip />
-    <!-- no translation found for medications_content_description (6165382876281780190) -->
+    <!-- no translation found for personal_details_content_description (3191211304673909831) -->
+    <skip />
+    <!-- no translation found for practitioner_details_uppercase_label (2940667649808082510) -->
+    <skip />
+    <!-- no translation found for practitioner_details_lowercase_label (8195591077717971542) -->
+    <skip />
+    <!-- no translation found for practitioner_details_content_description (8775396516928504185) -->
     <skip />
     <string name="pregnancy_uppercase_label" msgid="5979925175194337864">"ব্যৱহাৰকাৰীৰ গৰ্ভাৱস্থা"</string>
     <string name="pregnancy_lowercase_label" msgid="810439290131044517">"ব্যৱহাৰকাৰীৰ গৰ্ভাৱস্থা"</string>
     <string name="pregnancy_content_description" msgid="3436773729243586287">"ব্যৱহাৰকাৰীৰ গৰ্ভাৱস্থা সম্পৰ্কীয় ডেটা পঢ়ক"</string>
-    <string name="problems_uppercase_label" msgid="4047882613795113715">"ব্যৱহাৰকাৰীৰ স্বাস্থ্যৰ সমস্যা"</string>
-    <string name="problems_lowercase_label" msgid="6934298611508910866">"ব্যৱহাৰকাৰীৰ স্বাস্থ্যৰ সমস্যা"</string>
-    <string name="problems_content_description" msgid="1549418294742668962">"ব্যৱহাৰকাৰীৰ স্বাস্থ্যৰ সমস্যা সম্পৰ্কীয় ডেটা পঢ়ক"</string>
     <string name="procedures_uppercase_label" msgid="9176087520132593261">"ব্যৱহাৰকাৰীৰ চিকিৎসা প্ৰক্ৰিয়া"</string>
     <string name="procedures_lowercase_label" msgid="5320804313946273234">"ব্যৱহাৰকাৰীৰ চিকিৎসা প্ৰক্ৰিয়া"</string>
     <string name="procedures_content_description" msgid="1086900373141440005">"ব্যৱহাৰকাৰীৰ চিকিৎসা প্ৰক্ৰিয়া সম্পৰ্কীয় ডেটা পঢ়ক"</string>
     <string name="social_history_uppercase_label" msgid="1731364502071035544">"ব্যৱহাৰকাৰীৰ সামাজিক মাধ্যম সম্পৰ্কীয় ডেটা"</string>
     <string name="social_history_lowercase_label" msgid="9027541979445736412">"ব্যৱহাৰকাৰীৰ সামাজিক মাধ্যম সম্পৰ্কীয় ডেটা"</string>
     <string name="social_history_content_description" msgid="7187059309389849831">"ব্যৱহাৰকাৰীৰ সামাজিক মাধ্যম সম্পৰ্কীয় ডেটা পঢ়ক"</string>
+    <!-- no translation found for visits_uppercase_label (8532619758336375886) -->
+    <skip />
+    <!-- no translation found for visits_lowercase_label (2545887061364564151) -->
+    <skip />
+    <!-- no translation found for visits_content_description (6336796415049565697) -->
+    <skip />
     <string name="vital_signs_uppercase_label" msgid="214938594708280346">"ব্যৱহাৰকাৰীৰ দেহৰ গুৰুত্বপূৰ্ণ অংগৰ বিষয়ে ডেটা"</string>
     <string name="vital_signs_lowercase_label" msgid="9141304492316454529">"ব্যৱহাৰকাৰীৰ দেহৰ গুৰুত্বপূৰ্ণ অংগৰ বিষয়ে ডেটা"</string>
     <string name="vital_signs_content_description" msgid="914944352640528612">"ব্যৱহাৰকাৰীৰ দেহৰ গুৰুত্বপূৰ্ণ অংগৰ বিষয়ে ডেটা পঢ়ক"</string>
@@ -340,6 +358,8 @@
     <string name="navigation_previous_day" msgid="718353386484938584">"পূৰ্বৱৰ্তী দিন"</string>
     <string name="default_error" msgid="7966868260616403475">"কিবা ভুল হ’ল। অনুগ্ৰহ কৰি আকৌ চেষ্টা কৰক।"</string>
     <!-- no translation found for unkwown_resource (7932225227431922125) -->
+    <skip />
+    <!-- no translation found for raw_fhir_title (1295744907036066319) -->
     <skip />
     <!-- no translation found for raw_fhir_open_bracket (7974657451368655325) -->
     <skip />
@@ -478,6 +498,10 @@
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"Play Storeলৈ যাওক"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"Health Connect ব্যৱহাৰ কৰা আৰম্ভ কৰক"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connectএ আপোনাৰ স্বাস্থ্য আৰু শৰীৰচৰ্চা সম্পৰ্কীয় ডেটা ষ্ট’ৰ কৰি আপোনাক আপোনাৰ ডিভাইচত থকা বিভিন্ন এপ্‌সমূহ ছিংক কৰাৰ সহজ উপায় প্ৰদান কৰে"</string>
+    <!-- no translation found for onboarding_description_health_records (6816666836571797870) -->
+    <skip />
+    <!-- no translation found for onboarding_description_with_health_connect (8751881078749676542) -->
+    <skip />
     <string name="share_data" msgid="3481932156368883946">"আপোনাৰ এপ্‌সমূহৰ সৈতে ডেটা শ্বেয়াৰ কৰক"</string>
     <string name="share_data_description" msgid="2919871301634375092">"প্ৰতিটো এপে Health Connectত কি ডেটা পঢ়িব অথবা লিখিব পাৰিব সেয়া বাছনি কৰক"</string>
     <string name="manage_your_settings" msgid="7391184508015127137">"আপোনাৰ ছেটিং আৰু গোপনীয়তা পৰিচালনা কৰক"</string>
