--- a/apk/res/values-en-rCA/strings.xml
+++ b/apk/res/values-en-rCA/strings.xml
@@ -267,15 +267,15 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"skin temperature"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Read skin temperature"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Write skin temperature"</string>
-    <!-- no translation found for all_medical_data_uppercase_label (2380759160541898783) -->
-    <skip />
-    <!-- no translation found for all_medical_data_lowercase_label (6293814928992081842) -->
-    <skip />
-    <!-- no translation found for all_medical_data_content_description (4846586780533295022) -->
-    <skip />
+    <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"All health records"</string>
+    <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"all health records"</string>
+    <string name="all_medical_data_content_description" msgid="4846586780533295022">"Write all health records"</string>
     <string name="allergy_intolerance_uppercase_label" msgid="962905760867412783">"Allergies"</string>
     <string name="allergy_intolerance_lowercase_label" msgid="8705895234297776508">"allergies"</string>
     <string name="allergy_intolerance_content_description" msgid="5938549394285540206">"Read allergies"</string>
+    <string name="conditions_uppercase_label" msgid="5260404343402770877">"Conditions"</string>
+    <string name="conditions_lowercase_label" msgid="2678248918552246997">"conditions"</string>
+    <string name="conditions_content_description" msgid="3230552343616193829">"Read conditions"</string>
     <string name="immunization_uppercase_label" msgid="1467176749064014020">"Immunization"</string>
     <string name="immunization_lowercase_label" msgid="6464922369026887687">"immunization"</string>
     <string name="immunization_content_description" msgid="2910674919337229803">"Read immunization"</string>
@@ -285,18 +285,24 @@
     <string name="medications_uppercase_label" msgid="4783281053427990225">"Medications"</string>
     <string name="medications_lowercase_label" msgid="7808038774503092207">"medications"</string>
     <string name="medications_content_description" msgid="6165382876281780190">"Read medications"</string>
+    <string name="personal_details_uppercase_label" msgid="7241635933310394120">"Personal details"</string>
+    <string name="personal_details_lowercase_label" msgid="1907848447611775151">"personal details"</string>
+    <string name="personal_details_content_description" msgid="3191211304673909831">"Read personal details"</string>
+    <string name="practitioner_details_uppercase_label" msgid="2940667649808082510">"Practitioner details"</string>
+    <string name="practitioner_details_lowercase_label" msgid="8195591077717971542">"practitioner details"</string>
+    <string name="practitioner_details_content_description" msgid="8775396516928504185">"Read practitioner details"</string>
     <string name="pregnancy_uppercase_label" msgid="5979925175194337864">"Pregnancy"</string>
     <string name="pregnancy_lowercase_label" msgid="810439290131044517">"pregnancy"</string>
     <string name="pregnancy_content_description" msgid="3436773729243586287">"Read pregnancy"</string>
-    <string name="problems_uppercase_label" msgid="4047882613795113715">"Problems"</string>
-    <string name="problems_lowercase_label" msgid="6934298611508910866">"problems"</string>
-    <string name="problems_content_description" msgid="1549418294742668962">"Read problems"</string>
     <string name="procedures_uppercase_label" msgid="9176087520132593261">"Procedures"</string>
     <string name="procedures_lowercase_label" msgid="5320804313946273234">"procedures"</string>
     <string name="procedures_content_description" msgid="1086900373141440005">"Read procedures"</string>
     <string name="social_history_uppercase_label" msgid="1731364502071035544">"Social History"</string>
     <string name="social_history_lowercase_label" msgid="9027541979445736412">"social history"</string>
     <string name="social_history_content_description" msgid="7187059309389849831">"Read social history"</string>
+    <string name="visits_uppercase_label" msgid="8532619758336375886">"Visits"</string>
+    <string name="visits_lowercase_label" msgid="2545887061364564151">"visits"</string>
+    <string name="visits_content_description" msgid="6336796415049565697">"Read visits"</string>
     <string name="vital_signs_uppercase_label" msgid="214938594708280346">"Vital Signs"</string>
     <string name="vital_signs_lowercase_label" msgid="9141304492316454529">"vital signs"</string>
     <string name="vital_signs_content_description" msgid="914944352640528612">"Read vital signs"</string>
@@ -336,18 +342,13 @@
     <string name="navigation_selected_day" msgid="2510843479734091348">"Selected day"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Previous day"</string>
     <string name="default_error" msgid="7966868260616403475">"Something went wrong. Please try again."</string>
-    <!-- no translation found for unkwown_resource (7932225227431922125) -->
-    <skip />
-    <!-- no translation found for raw_fhir_open_bracket (7974657451368655325) -->
-    <skip />
-    <!-- no translation found for raw_fhir_closed_bracket (9084379463440675078) -->
-    <skip />
-    <!-- no translation found for raw_fhir_field_value (369633095565031835) -->
-    <skip />
-    <!-- no translation found for raw_fhir_value (8627152854130338531) -->
-    <skip />
-    <!-- no translation found for raw_fhir_content_description (1491420802097635439) -->
-    <skip />
+    <string name="unkwown_resource" msgid="7932225227431922125">"Unknown Resource"</string>
+    <string name="raw_fhir_title" msgid="1295744907036066319">"Source data"</string>
+    <string name="raw_fhir_open_bracket" msgid="7974657451368655325">"<xliff:g id="PREFIX">%1$s</xliff:g>Open bracket."</string>
+    <string name="raw_fhir_closed_bracket" msgid="9084379463440675078">"<xliff:g id="PREFIX">%1$s</xliff:g>Closed bracket."</string>
+    <string name="raw_fhir_field_value" msgid="369633095565031835">"<xliff:g id="PREFIX">%1$s</xliff:g> Field <xliff:g id="FIELD">%2$s</xliff:g> Value"</string>
+    <string name="raw_fhir_value" msgid="8627152854130338531">"<xliff:g id="PREFIX">%1$s</xliff:g>: <xliff:g id="VALUE">%2$s</xliff:g>."</string>
+    <string name="raw_fhir_content_description" msgid="1491420802097635439">"Detailed source code: <xliff:g id="SOURCE_CODE">%1$s</xliff:g>"</string>
     <string name="health_permission_header_description" msgid="7497601695462373927">"Apps with this permission can read and write your health and fitness data."</string>
     <string name="connected_apps_text" msgid="1177626440966855831">"Control which apps can access data stored in Health Connect. Tap an app to review the data it can read or write."</string>
     <string name="connected_apps_section_title" msgid="2415288099612126258">"Allowed access"</string>
@@ -475,6 +476,8 @@
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"Go to the Play Store"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"Get started with Health Connect"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect stores your health and fitness data, giving you a simple way to sync the different apps on your device"</string>
+    <string name="onboarding_description_health_records" msgid="6816666836571797870">"Health Connect stores and syncs your health and fitness data from different apps.\n\n"<b>"Fitness and wellness data,"</b>" including exercise sessions, steps, nutrition, sleep and more\n\n"<b>"Health records,"</b>" including immunizations, lab results and more"</string>
+    <string name="onboarding_description_with_health_connect" msgid="8751881078749676542">"With Health Connect you can"</string>
     <string name="share_data" msgid="3481932156368883946">"Share data with your apps"</string>
     <string name="share_data_description" msgid="2919871301634375092">"Choose the data each app can read or write to Health Connect"</string>
     <string name="manage_your_settings" msgid="7391184508015127137">"Manage your settings and privacy"</string>
@@ -1069,42 +1072,23 @@
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Find more apps to sync with <xliff:g id="APP_NAME">%s</xliff:g> via Health Connect"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"See on app store"</string>
     <string name="select_all" msgid="837499881590001166">"Select all"</string>
-    <!-- no translation found for deletion_confirmation_dialog_body (7643182907084645805) -->
-    <skip />
-    <!-- no translation found for all_data_selected_deletion_confirmation_dialog (2103387413531373305) -->
-    <skip />
-    <!-- no translation found for some_data_selected_deletion_confirmation_dialog (2466281529240054537) -->
-    <skip />
-    <!-- no translation found for all_app_data_selected_deletion_confirmation_dialog (1077157006579195958) -->
-    <skip />
-    <!-- no translation found for some_app_data_selected_deletion_confirmation_dialog (5378172524112070270) -->
-    <skip />
-    <!-- no translation found for all_entries_selected_day_deletion_confirmation_dialog (2887646600541520444) -->
-    <skip />
-    <!-- no translation found for all_entries_selected_week_deletion_confirmation_dialog (6759608395185369048) -->
-    <skip />
-    <!-- no translation found for all_entries_selected_month_deletion_confirmation_dialog (6030161837387559132) -->
-    <skip />
-    <!-- no translation found for some_entries_selected_day_deletion_confirmation_dialog (3481363886097542565) -->
-    <skip />
-    <!-- no translation found for some_entries_selected_week_deletion_confirmation_dialog (7150217982297131340) -->
-    <skip />
-    <!-- no translation found for some_entries_selected_month_deletion_confirmation_dialog (3712014725077445591) -->
-    <skip />
-    <!-- no translation found for one_entry_selected_deletion_confirmation_dialog (4642573082594021789) -->
-    <skip />
-    <!-- no translation found for all_app_entries_selected_day_deletion_confirmation_dialog (2342034541791960151) -->
-    <skip />
-    <!-- no translation found for all_app_entries_selected_week_deletion_confirmation_dialog (24289763841770386) -->
-    <skip />
-    <!-- no translation found for all_app_entries_selected_month_deletion_confirmation_dialog (3240581815583269052) -->
-    <skip />
-    <!-- no translation found for some_app_entries_selected_day_deletion_confirmation_dialog (1030347169774815676) -->
-    <skip />
-    <!-- no translation found for some_app_entries_selected_week_deletion_confirmation_dialog (8009352719322914060) -->
-    <skip />
-    <!-- no translation found for some_app_entries_selected_month_deletion_confirmation_dialog (6617805533334875710) -->
-    <skip />
-    <!-- no translation found for one_app_entry_selected_deletion_confirmation_dialog (7101939753210640660) -->
-    <skip />
+    <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"Connected apps will no longer be able to read this data from Health Connect"</string>
+    <string name="all_data_selected_deletion_confirmation_dialog" msgid="2103387413531373305">"Permanently delete all data?"</string>
+    <string name="some_data_selected_deletion_confirmation_dialog" msgid="2466281529240054537">"Permanently delete selected data?"</string>
+    <string name="all_app_data_selected_deletion_confirmation_dialog" msgid="1077157006579195958">"Permanently delete all <xliff:g id="APP_NAME">%s</xliff:g> data?"</string>
+    <string name="some_app_data_selected_deletion_confirmation_dialog" msgid="5378172524112070270">"Permanently delete selected <xliff:g id="APP_NAME">%s</xliff:g> data?"</string>
+    <string name="all_entries_selected_day_deletion_confirmation_dialog" msgid="2887646600541520444">"Permanently delete all entries for <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>?"</string>
+    <string name="all_entries_selected_week_deletion_confirmation_dialog" msgid="6759608395185369048">"Permanently delete all entries for the week of <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>?"</string>
+    <string name="all_entries_selected_month_deletion_confirmation_dialog" msgid="6030161837387559132">"Permanently delete all entries for <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>?"</string>
+    <string name="some_entries_selected_day_deletion_confirmation_dialog" msgid="3481363886097542565">"Permanently delete selected entries for <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>?"</string>
+    <string name="some_entries_selected_week_deletion_confirmation_dialog" msgid="7150217982297131340">"Permanently delete selected entries for the week of <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>?"</string>
+    <string name="some_entries_selected_month_deletion_confirmation_dialog" msgid="3712014725077445591">"Permanently delete selected entries for <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g>?"</string>
+    <string name="one_entry_selected_deletion_confirmation_dialog" msgid="4642573082594021789">"Permanently delete this entry?"</string>
+    <string name="all_app_entries_selected_day_deletion_confirmation_dialog" msgid="2342034541791960151">"Permanently delete all <xliff:g id="APP_NAME">%1$s</xliff:g> entries for <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
+    <string name="all_app_entries_selected_week_deletion_confirmation_dialog" msgid="24289763841770386">"Permanently delete all <xliff:g id="APP_NAME">%1$s</xliff:g> entries for the week of <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
+    <string name="all_app_entries_selected_month_deletion_confirmation_dialog" msgid="3240581815583269052">"Permanently delete all <xliff:g id="APP_NAME">%1$s</xliff:g> entries for <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
+    <string name="some_app_entries_selected_day_deletion_confirmation_dialog" msgid="1030347169774815676">"Permanently delete selected <xliff:g id="APP_NAME">%1$s</xliff:g> entries for <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
+    <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"Permanently delete selected <xliff:g id="APP_NAME">%1$s</xliff:g> entries for the week of <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
+    <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Permanently delete selected <xliff:g id="APP_NAME">%1$s</xliff:g> entries for <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
+    <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Permanently delete this <xliff:g id="APP_NAME">%s</xliff:g> entry?"</string>
 </resources>
