--- a/apk/res/values-es-rUS/strings.xml
+++ b/apk/res/values-es-rUS/strings.xml
@@ -276,48 +276,51 @@
     <string name="allergy_intolerance_uppercase_label" msgid="962905760867412783">"Alergias"</string>
     <string name="allergy_intolerance_lowercase_label" msgid="8705895234297776508">"alergias"</string>
     <string name="allergy_intolerance_content_description" msgid="5938549394285540206">"Leer alergias"</string>
+    <!-- no translation found for conditions_uppercase_label (5260404343402770877) -->
+    <skip />
+    <!-- no translation found for conditions_lowercase_label (2678248918552246997) -->
+    <skip />
+    <!-- no translation found for conditions_content_description (3230552343616193829) -->
+    <skip />
     <string name="immunization_uppercase_label" msgid="1467176749064014020">"Vacunación"</string>
     <string name="immunization_lowercase_label" msgid="6464922369026887687">"vacunación"</string>
     <string name="immunization_content_description" msgid="2910674919337229803">"Leer la vacunación"</string>
-    <!-- no translation found for laboratory_results_uppercase_label (2521886562709901654) -->
-    <skip />
-    <!-- no translation found for laboratory_results_lowercase_label (6437932041744631964) -->
-    <skip />
-    <!-- no translation found for laboratory_results_content_description (5882338877203692484) -->
-    <skip />
+    <string name="laboratory_results_uppercase_label" msgid="2521886562709901654">"Resultados de laboratorio"</string>
+    <string name="laboratory_results_lowercase_label" msgid="6437932041744631964">"resultados de laboratorio"</string>
+    <string name="laboratory_results_content_description" msgid="5882338877203692484">"Leer resultados de laboratorio"</string>
     <string name="medications_uppercase_label" msgid="4783281053427990225">"Medicamentos"</string>
     <string name="medications_lowercase_label" msgid="7808038774503092207">"medicamentos"</string>
     <string name="medications_content_description" msgid="6165382876281780190">"Leer medicamentos"</string>
-    <!-- no translation found for pregnancy_uppercase_label (5979925175194337864) -->
+    <!-- no translation found for personal_details_uppercase_label (7241635933310394120) -->
     <skip />
-    <!-- no translation found for pregnancy_lowercase_label (810439290131044517) -->
+    <!-- no translation found for personal_details_lowercase_label (1907848447611775151) -->
     <skip />
-    <!-- no translation found for pregnancy_content_description (3436773729243586287) -->
+    <!-- no translation found for personal_details_content_description (3191211304673909831) -->
     <skip />
-    <!-- no translation found for problems_uppercase_label (4047882613795113715) -->
+    <!-- no translation found for practitioner_details_uppercase_label (2940667649808082510) -->
     <skip />
-    <!-- no translation found for problems_lowercase_label (6934298611508910866) -->
+    <!-- no translation found for practitioner_details_lowercase_label (8195591077717971542) -->
     <skip />
-    <!-- no translation found for problems_content_description (1549418294742668962) -->
+    <!-- no translation found for practitioner_details_content_description (8775396516928504185) -->
     <skip />
-    <!-- no translation found for procedures_uppercase_label (9176087520132593261) -->
+    <string name="pregnancy_uppercase_label" msgid="5979925175194337864">"Embarazo"</string>
+    <string name="pregnancy_lowercase_label" msgid="810439290131044517">"embarazo"</string>
+    <string name="pregnancy_content_description" msgid="3436773729243586287">"Leer embarazo"</string>
+    <string name="procedures_uppercase_label" msgid="9176087520132593261">"Procedimientos"</string>
+    <string name="procedures_lowercase_label" msgid="5320804313946273234">"procedimientos"</string>
+    <string name="procedures_content_description" msgid="1086900373141440005">"Leer procedimientos"</string>
+    <string name="social_history_uppercase_label" msgid="1731364502071035544">"Historia social"</string>
+    <string name="social_history_lowercase_label" msgid="9027541979445736412">"historia social"</string>
+    <string name="social_history_content_description" msgid="7187059309389849831">"Leer historia social"</string>
+    <!-- no translation found for visits_uppercase_label (8532619758336375886) -->
     <skip />
-    <!-- no translation found for procedures_lowercase_label (5320804313946273234) -->
+    <!-- no translation found for visits_lowercase_label (2545887061364564151) -->
     <skip />
-    <!-- no translation found for procedures_content_description (1086900373141440005) -->
+    <!-- no translation found for visits_content_description (6336796415049565697) -->
     <skip />
-    <!-- no translation found for social_history_uppercase_label (1731364502071035544) -->
-    <skip />
-    <!-- no translation found for social_history_lowercase_label (9027541979445736412) -->
-    <skip />
-    <!-- no translation found for social_history_content_description (7187059309389849831) -->
-    <skip />
-    <!-- no translation found for vital_signs_uppercase_label (214938594708280346) -->
-    <skip />
-    <!-- no translation found for vital_signs_lowercase_label (9141304492316454529) -->
-    <skip />
-    <!-- no translation found for vital_signs_content_description (914944352640528612) -->
-    <skip />
+    <string name="vital_signs_uppercase_label" msgid="214938594708280346">"Signos vitales"</string>
+    <string name="vital_signs_lowercase_label" msgid="9141304492316454529">"signos vitales"</string>
+    <string name="vital_signs_content_description" msgid="914944352640528612">"Leer signos vitales"</string>
     <string name="mindfulness_uppercase_label" msgid="7678646522566275472">"Mindfulness"</string>
     <string name="mindfulness_lowercase_label" msgid="5184488636180881614">"mindfulness"</string>
     <string name="mindfulness_read_content_description" msgid="739187536826062524">"Leer sesión de mindfulness"</string>
@@ -341,29 +344,22 @@
     <string name="permissions_disconnect_dialog_message_history" msgid="3793206180295111081">"<xliff:g id="APP_NAME">%1$s</xliff:g> ya no podrá leer ni escribir datos de Health Connect, incluidos los datos anteriores.\n\nEsto no afecta otros permisos que la app pueda tener, como la ubicación, la cámara o el micrófono."</string>
     <string name="permissions_disconnect_dialog_message_combined" msgid="4163369526932602203">"<xliff:g id="APP_NAME">%1$s</xliff:g> ya no podrá leer ni escribir datos de Health Connect, incluidos los datos anteriores y en segundo plano.\n\nEsto no afecta otros permisos que la app pueda tener, como la ubicación, la cámara o el micrófono."</string>
     <string name="permissions_disconnect_dialog_checkbox" msgid="8646951566431872823">"También borrar los datos de <xliff:g id="APP_NAME">%1$s</xliff:g> de Health Connect"</string>
-    <!-- no translation found for disconnect_all_health_permissions_title (3995410660376966233) -->
-    <skip />
-    <!-- no translation found for disconnect_all_medical_permissions_title (735315242997370168) -->
-    <skip />
-    <!-- no translation found for disconnect_all_fitness_permissions_title (7612364222525900592) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_no_additional_permissions_dialog_message (211728516196974197) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_and_background_permissions_dialog_message (654533675296670869) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_and_historical_permissions_dialog_message (6743215620789357899) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_and_additional_permissions_dialog_message (6062891741278986209) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_permissions_dialog_checkbox (762880061016391846) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_permissions_success_toast (9010063821116197894) -->
-    <skip />
+    <string name="disconnect_all_health_permissions_title" msgid="3995410660376966233">"¿Quieres quitar todos los permisos?"</string>
+    <string name="disconnect_all_medical_permissions_title" msgid="735315242997370168">"¿Quieres quitar todos los permisos de registro de salud?"</string>
+    <string name="disconnect_all_fitness_permissions_title" msgid="7612364222525900592">"¿Quieres quitar todos los permisos de salud y bienestar?"</string>
+    <string name="disconnect_all_health_no_additional_permissions_dialog_message" msgid="211728516196974197">"<xliff:g id="APP_NAME">%1$s</xliff:g> ya no podrá leer ni escribir datos de Health Connect.\n\nEsto no afecta otros permisos que la app pueda tener, como la cámara, el micrófono o la ubicación."</string>
+    <string name="disconnect_all_health_and_background_permissions_dialog_message" msgid="654533675296670869">"<xliff:g id="APP_NAME">%1$s</xliff:g> ya no podrá leer ni escribir datos de Health Connect, incluidos los datos en segundo plano.\n\nEsto no afecta otros permisos que la app pueda tener, como la cámara, el micrófono o la ubicación."</string>
+    <string name="disconnect_all_health_and_historical_permissions_dialog_message" msgid="6743215620789357899">"<xliff:g id="APP_NAME">%1$s</xliff:g> ya no podrá leer ni escribir datos de Health Connect, incluidos los datos anteriores.\n\nEsto no afecta otros permisos que la app pueda tener, como la cámara, el micrófono o la ubicación."</string>
+    <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> ya no podrá leer ni escribir datos de Health Connect, incluidos los datos anteriores y en segundo plano.\n\nEsto no afecta otros permisos que la app pueda tener, como la cámara, el micrófono o la ubicación."</string>
+    <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"También borrar los datos de actividad física y los registros de salud de <xliff:g id="APP_NAME">%1$s</xliff:g> de Health Connect"</string>
+    <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Se quitaron los permisos para esta app"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Día siguiente"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Día seleccionado"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Día anterior"</string>
     <string name="default_error" msgid="7966868260616403475">"Se produjo un error. Vuelve a intentarlo."</string>
     <!-- no translation found for unkwown_resource (7932225227431922125) -->
+    <skip />
+    <!-- no translation found for raw_fhir_title (1295744907036066319) -->
     <skip />
     <!-- no translation found for raw_fhir_open_bracket (7974657451368655325) -->
     <skip />
@@ -391,8 +387,7 @@
     <string name="permissions_disconnect_all_dialog_disconnect" msgid="2134136493310257746">"Quitar todo"</string>
     <string name="manage_permissions_manage_app_header" msgid="6356348062088358761">"Administrar app"</string>
     <string name="see_app_data" msgid="3951030076195119476">"Ver datos de app"</string>
-    <!-- no translation found for remove_access_for_this_app (7701101420310711833) -->
-    <skip />
+    <string name="remove_access_for_this_app" msgid="7701101420310711833">"Quitar el acceso de esta app"</string>
     <string name="delete_app_data" msgid="6890357774873859952">"Borrar datos de la app"</string>
     <string name="inactive_apps_section_title" msgid="7492812973696378690">"Apps inactivas"</string>
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Estas apps ya no tienen acceso, pero todavía tienen datos almacenados en Health Connect"</string>
@@ -460,8 +455,7 @@
     <string name="export_destination_title" msgid="8352929396306002479">"Elige dónde se guardará la exportación programada"</string>
     <string name="export_invalid_storage" msgid="1459055934301871321">"Elige una app de almacenamiento en la nube para exportar tus datos"</string>
     <string name="export_default_file_name" msgid="1146984404965754445">"Health Connect"</string>
-    <!-- no translation found for export_default_file_name_with_sequence (2380551038319211752) -->
-    <skip />
+    <string name="export_default_file_name_with_sequence" msgid="2380551038319211752">"Health Connect (<xliff:g id="EXPORT_SEQUENTIAL_NUMBER">%1$s</xliff:g>)"</string>
     <string name="import_confirmation_dialog_title" msgid="1218478436676890997">"¿Quieres importar este archivo?"</string>
     <string name="import_confirmation_dialog_text" msgid="7274564242039735667">"Se importará <xliff:g id="FILE_NAME">%1$s</xliff:g> a Health Connect"</string>
     <string name="import_confirmation_dialog_cancel_button" msgid="4323351978842360895">"Cancelar"</string>
@@ -504,6 +498,10 @@
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"Ir a Play Store"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"Empieza a usar Health Connect"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect almacena tus datos de salud y actividad física, lo que te brinda una manera simple de sincronizar las diferentes apps en tu dispositivo"</string>
+    <!-- no translation found for onboarding_description_health_records (6816666836571797870) -->
+    <skip />
+    <!-- no translation found for onboarding_description_with_health_connect (8751881078749676542) -->
+    <skip />
     <string name="share_data" msgid="3481932156368883946">"Compartir datos con tus apps"</string>
     <string name="share_data_description" msgid="2919871301634375092">"Elige los datos que cada app puede leer o escribir con Health Connect."</string>
     <string name="manage_your_settings" msgid="7391184508015127137">"Administra tu configuración y tu privacidad"</string>
@@ -548,8 +546,7 @@
     <string name="confirming_question_data_type_from_app_all" msgid="8361163993548510509">"¿Deseas borrar de forma permanente toda la información de <xliff:g id="DATA_TYPE">%1$s</xliff:g> que agregó <xliff:g id="APP_DATA">%2$s</xliff:g>?"</string>
     <string name="confirming_question_single_entry" msgid="2064578008447638932">"¿Quieres borrar permanentemente esta entrada de Health Connect?"</string>
     <string name="confirming_question_message" msgid="2934249835529079545">"Las apps conectadas ya no podrán acceder a estos datos de Health Connect"</string>
-    <!-- no translation found for confirming_question_message_menstruation (944931041343695373) -->
-    <skip />
+    <string name="confirming_question_message_menstruation" msgid="944931041343695373">"Esto borrará todas las menstruaciones registradas desde <xliff:g id="START_DATE">%1$s</xliff:g> hasta <xliff:g id="END_DATE">%2$s</xliff:g>."</string>
     <string name="confirming_question_delete_button" msgid="1999996759507959985">"Borrar"</string>
     <string name="confirming_question_go_back_button" msgid="9037523726124648221">"Atrás"</string>
     <string name="delete_dialog_success_got_it_button" msgid="8047812840310612293">"Listo"</string>
