--- a/apk/res/values-km/strings.xml
+++ b/apk/res/values-km/strings.xml
@@ -267,39 +267,54 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"សីតុណ្ហភាពស្បែក"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"អានសីតុណ្ហភាពស្បែក"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"សរសេរសីតុណ្ហភាពស្បែក"</string>
-    <!-- no translation found for all_medical_data_uppercase_label (2380759160541898783) -->
-    <skip />
-    <!-- no translation found for all_medical_data_lowercase_label (6293814928992081842) -->
-    <skip />
-    <!-- no translation found for all_medical_data_content_description (4846586780533295022) -->
-    <skip />
+    <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"កំណត់ត្រាសុខភាពទាំងអស់"</string>
+    <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"កំណត់ត្រាសុខភាពទាំងអស់"</string>
+    <string name="all_medical_data_content_description" msgid="4846586780533295022">"សរសេរកំណត់ត្រាសុខភាពទាំងអស់"</string>
     <string name="allergy_intolerance_uppercase_label" msgid="962905760867412783">"អាឡែហ្ស៊ី"</string>
     <string name="allergy_intolerance_lowercase_label" msgid="8705895234297776508">"អាឡែហ្ស៊ី"</string>
     <string name="allergy_intolerance_content_description" msgid="5938549394285540206">"អាន​ទិន្នន័យ​អាឡែហ្ស៊ី"</string>
+    <!-- no translation found for conditions_uppercase_label (5260404343402770877) -->
+    <skip />
+    <!-- no translation found for conditions_lowercase_label (2678248918552246997) -->
+    <skip />
+    <!-- no translation found for conditions_content_description (3230552343616193829) -->
+    <skip />
     <string name="immunization_uppercase_label" msgid="1467176749064014020">"ការចាក់ថ្នាំបង្ការ"</string>
     <string name="immunization_lowercase_label" msgid="6464922369026887687">"ការចាក់ថ្នាំបង្ការ"</string>
     <string name="immunization_content_description" msgid="2910674919337229803">"អានអំពីការចាក់ថ្នាំបង្ការ"</string>
     <string name="laboratory_results_uppercase_label" msgid="2521886562709901654">"លទ្ធផលមន្ទីរពិសោធន៍"</string>
     <string name="laboratory_results_lowercase_label" msgid="6437932041744631964">"លទ្ធផលមន្ទីរពិសោធន៍"</string>
     <string name="laboratory_results_content_description" msgid="5882338877203692484">"អានលទ្ធផលមន្ទីរពិសោធន៍"</string>
-    <!-- no translation found for medications_uppercase_label (4783281053427990225) -->
+    <string name="medications_uppercase_label" msgid="4783281053427990225">"ការប្រើឱសថ"</string>
+    <string name="medications_lowercase_label" msgid="7808038774503092207">"ការប្រើឱសថ"</string>
+    <string name="medications_content_description" msgid="6165382876281780190">"អានអំពីការប្រើឱសថ"</string>
+    <!-- no translation found for personal_details_uppercase_label (7241635933310394120) -->
     <skip />
-    <!-- no translation found for medications_lowercase_label (7808038774503092207) -->
+    <!-- no translation found for personal_details_lowercase_label (1907848447611775151) -->
     <skip />
-    <!-- no translation found for medications_content_description (6165382876281780190) -->
+    <!-- no translation found for personal_details_content_description (3191211304673909831) -->
+    <skip />
+    <!-- no translation found for practitioner_details_uppercase_label (2940667649808082510) -->
+    <skip />
+    <!-- no translation found for practitioner_details_lowercase_label (8195591077717971542) -->
+    <skip />
+    <!-- no translation found for practitioner_details_content_description (8775396516928504185) -->
     <skip />
     <string name="pregnancy_uppercase_label" msgid="5979925175194337864">"ការមានគភ៌"</string>
     <string name="pregnancy_lowercase_label" msgid="810439290131044517">"ការមានគភ៌"</string>
     <string name="pregnancy_content_description" msgid="3436773729243586287">"អានការមានគភ៌"</string>
-    <string name="problems_uppercase_label" msgid="4047882613795113715">"បញ្ហា"</string>
-    <string name="problems_lowercase_label" msgid="6934298611508910866">"បញ្ហា"</string>
-    <string name="problems_content_description" msgid="1549418294742668962">"អានបញ្ហា"</string>
     <string name="procedures_uppercase_label" msgid="9176087520132593261">"នីតិវិធី"</string>
     <string name="procedures_lowercase_label" msgid="5320804313946273234">"នីតិវិធី"</string>
     <string name="procedures_content_description" msgid="1086900373141440005">"អាននីតិវិធី"</string>
     <string name="social_history_uppercase_label" msgid="1731364502071035544">"ប្រវត្តិបណ្ដាញសង្គម"</string>
     <string name="social_history_lowercase_label" msgid="9027541979445736412">"ប្រវត្តិបណ្ដាញសង្គម"</string>
     <string name="social_history_content_description" msgid="7187059309389849831">"អានប្រវត្តិបណ្ដាញសង្គម"</string>
+    <!-- no translation found for visits_uppercase_label (8532619758336375886) -->
+    <skip />
+    <!-- no translation found for visits_lowercase_label (2545887061364564151) -->
+    <skip />
+    <!-- no translation found for visits_content_description (6336796415049565697) -->
+    <skip />
     <string name="vital_signs_uppercase_label" msgid="214938594708280346">"សញ្ញាសរីរាង្គសំខាន់ៗ"</string>
     <string name="vital_signs_lowercase_label" msgid="9141304492316454529">"សញ្ញាសរីរាង្គសំខាន់ៗ"</string>
     <string name="vital_signs_content_description" msgid="914944352640528612">"អានសញ្ញាសរីរាង្គសំខាន់ៗ"</string>
@@ -339,18 +354,14 @@
     <string name="navigation_selected_day" msgid="2510843479734091348">"ថ្ងៃដែលបានជ្រើសរើស"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"ថ្ងៃ​មុន"</string>
     <string name="default_error" msgid="7966868260616403475">"មានអ្វីមួយខុសប្រក្រតី។ សូមព្យាយាមម្ដងទៀត។"</string>
-    <!-- no translation found for unkwown_resource (7932225227431922125) -->
+    <string name="unkwown_resource" msgid="7932225227431922125">"ធនធាន​ដែលមិនស្គាល់"</string>
+    <!-- no translation found for raw_fhir_title (1295744907036066319) -->
     <skip />
-    <!-- no translation found for raw_fhir_open_bracket (7974657451368655325) -->
-    <skip />
-    <!-- no translation found for raw_fhir_closed_bracket (9084379463440675078) -->
-    <skip />
-    <!-- no translation found for raw_fhir_field_value (369633095565031835) -->
-    <skip />
-    <!-- no translation found for raw_fhir_value (8627152854130338531) -->
-    <skip />
-    <!-- no translation found for raw_fhir_content_description (1491420802097635439) -->
-    <skip />
+    <string name="raw_fhir_open_bracket" msgid="7974657451368655325">"<xliff:g id="PREFIX">%1$s</xliff:g>វង់តង្កៀប​បើក។"</string>
+    <string name="raw_fhir_closed_bracket" msgid="9084379463440675078">"<xliff:g id="PREFIX">%1$s</xliff:g>វង់តង្កៀបបិទ។"</string>
+    <string name="raw_fhir_field_value" msgid="369633095565031835">"<xliff:g id="PREFIX">%1$s</xliff:g> កន្លែងបញ្ចូល <xliff:g id="FIELD">%2$s</xliff:g> តម្លៃ"</string>
+    <string name="raw_fhir_value" msgid="8627152854130338531">"<xliff:g id="PREFIX">%1$s</xliff:g>៖ <xliff:g id="VALUE">%2$s</xliff:g>។"</string>
+    <string name="raw_fhir_content_description" msgid="1491420802097635439">"កូដប្រភពលម្អិត៖ <xliff:g id="SOURCE_CODE">%1$s</xliff:g>"</string>
     <string name="health_permission_header_description" msgid="7497601695462373927">"កម្មវិធីដែល​មានការអនុញ្ញាតនេះ​អាចអាន និងសរសេរទិន្នន័យសុខភាព និងសម្បទា​របស់អ្នកបាន។"</string>
     <string name="connected_apps_text" msgid="1177626440966855831">"គ្រប់គ្រងថាតើកម្មវិធីណាខ្លះអាចចូលប្រើប្រាស់ទិន្នន័យដែលបានរក្សាទុកក្នុង Health Connect។ ចុចលើកម្មវិធីមួយ ដើម្បីពិនិត្យមើលទិន្នន័យដែលកម្មវិធីនោះអាចអាន ឬសរសេរបាន។"</string>
     <string name="connected_apps_section_title" msgid="2415288099612126258">"សិទ្ធិចូលប្រើដែលត្រូវបានអនុញ្ញាត"</string>
@@ -478,6 +489,10 @@
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"ទៅកាន់ Play Store"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"ចាប់ផ្ដើមជាមួយ Health Connect"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect រក្សាទុក​ទិន្នន័យសុខភាព និងសម្បទា​របស់អ្នក ដោយផ្តល់ឱ្យ​អ្នកនូវ​វិធីសាមញ្ញ​ក្នុងការធ្វើសមកាលកម្ម​កម្មវិធីផ្សេងៗ​នៅលើឧបករណ៍​របស់អ្នក"</string>
+    <!-- no translation found for onboarding_description_health_records (6816666836571797870) -->
+    <skip />
+    <!-- no translation found for onboarding_description_with_health_connect (8751881078749676542) -->
+    <skip />
     <string name="share_data" msgid="3481932156368883946">"ចែករំលែកទិន្នន័យជាមួយកម្មវិធីរបស់អ្នក"</string>
     <string name="share_data_description" msgid="2919871301634375092">"ជ្រើសរើសទិន្នន័យដែលកម្មវិធីនីមួយៗអាចអាន ឬសរសេរទៅកាន់ Health Connect បាន"</string>
     <string name="manage_your_settings" msgid="7391184508015127137">"គ្រប់គ្រងការកំណត់ និងឯកជនភាពរបស់អ្នក"</string>
@@ -1072,42 +1087,23 @@
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"ស្វែងរកកម្មវិធីច្រើនទៀត ដើម្បីធ្វើសមកាលកម្មជាមួយ <xliff:g id="APP_NAME">%s</xliff:g> តាមរយៈ Health Connect"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"មើលនៅលើហាង​កម្មវិធី"</string>
     <string name="select_all" msgid="837499881590001166">"ជ្រើស​រើសទាំង​អស់"</string>
-    <!-- no translation found for deletion_confirmation_dialog_body (7643182907084645805) -->
-    <skip />
-    <!-- no translation found for all_data_selected_deletion_confirmation_dialog (2103387413531373305) -->
-    <skip />
-    <!-- no translation found for some_data_selected_deletion_confirmation_dialog (2466281529240054537) -->
-    <skip />
-    <!-- no translation found for all_app_data_selected_deletion_confirmation_dialog (1077157006579195958) -->
-    <skip />
-    <!-- no translation found for some_app_data_selected_deletion_confirmation_dialog (5378172524112070270) -->
-    <skip />
-    <!-- no translation found for all_entries_selected_day_deletion_confirmation_dialog (2887646600541520444) -->
-    <skip />
-    <!-- no translation found for all_entries_selected_week_deletion_confirmation_dialog (6759608395185369048) -->
-    <skip />
-    <!-- no translation found for all_entries_selected_month_deletion_confirmation_dialog (6030161837387559132) -->
-    <skip />
-    <!-- no translation found for some_entries_selected_day_deletion_confirmation_dialog (3481363886097542565) -->
-    <skip />
-    <!-- no translation found for some_entries_selected_week_deletion_confirmation_dialog (7150217982297131340) -->
-    <skip />
-    <!-- no translation found for some_entries_selected_month_deletion_confirmation_dialog (3712014725077445591) -->
-    <skip />
-    <!-- no translation found for one_entry_selected_deletion_confirmation_dialog (4642573082594021789) -->
-    <skip />
-    <!-- no translation found for all_app_entries_selected_day_deletion_confirmation_dialog (2342034541791960151) -->
-    <skip />
-    <!-- no translation found for all_app_entries_selected_week_deletion_confirmation_dialog (24289763841770386) -->
-    <skip />
-    <!-- no translation found for all_app_entries_selected_month_deletion_confirmation_dialog (3240581815583269052) -->
-    <skip />
-    <!-- no translation found for some_app_entries_selected_day_deletion_confirmation_dialog (1030347169774815676) -->
-    <skip />
-    <!-- no translation found for some_app_entries_selected_week_deletion_confirmation_dialog (8009352719322914060) -->
-    <skip />
-    <!-- no translation found for some_app_entries_selected_month_deletion_confirmation_dialog (6617805533334875710) -->
-    <skip />
-    <!-- no translation found for one_app_entry_selected_deletion_confirmation_dialog (7101939753210640660) -->
-    <skip />
+    <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"កម្មវិធីដែលបានភ្ជាប់នឹងមិនអាចអានទិន្នន័យនេះពី Health Connect បានទៀតទេ"</string>
+    <string name="all_data_selected_deletion_confirmation_dialog" msgid="2103387413531373305">"លុបទិន្នន័យទាំងអស់ជាអចិន្ត្រៃយ៍ឬ?"</string>
+    <string name="some_data_selected_deletion_confirmation_dialog" msgid="2466281529240054537">"លុបទិន្នន័យបានជ្រើសរើសទាំងអស់ជាអចិន្ត្រៃយ៍ឬ?"</string>
+    <string name="all_app_data_selected_deletion_confirmation_dialog" msgid="1077157006579195958">"លុបទិន្នន័យ <xliff:g id="APP_NAME">%s</xliff:g> ទាំងអស់ជាអចិន្ត្រៃយ៍ឬ?"</string>
+    <string name="some_app_data_selected_deletion_confirmation_dialog" msgid="5378172524112070270">"លុបទិន្នន័យ <xliff:g id="APP_NAME">%s</xliff:g> ដែលបានជ្រើសរើសជាអចិន្ត្រៃយ៍ឬ?"</string>
+    <string name="all_entries_selected_day_deletion_confirmation_dialog" msgid="2887646600541520444">"លុបធាតុទាំងអស់ជាអចិន្ត្រៃយ៍សម្រាប់ថ្ងៃទី <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> ឬ?"</string>
+    <string name="all_entries_selected_week_deletion_confirmation_dialog" msgid="6759608395185369048">"លុបធាតុទាំងអស់ជាអចិន្ត្រៃយ៍សម្រាប់សប្តាហ៍នៃ <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> ឬ?"</string>
+    <string name="all_entries_selected_month_deletion_confirmation_dialog" msgid="6030161837387559132">"លុបធាតុទាំងអស់ជាអចិន្ត្រៃយ៍សម្រាប់ថ្ងៃទី <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> ឬ?"</string>
+    <string name="some_entries_selected_day_deletion_confirmation_dialog" msgid="3481363886097542565">"លុបធាតុដែលបានជ្រើសរើសជាអចិន្ត្រៃយ៍សម្រាប់ថ្ងៃទី <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> ឬ?"</string>
+    <string name="some_entries_selected_week_deletion_confirmation_dialog" msgid="7150217982297131340">"លុបធាតុដែលបានជ្រើសរើសជាអចិន្ត្រៃយ៍សម្រាប់សប្តាហ៍នៃថ្ងៃទី <xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> ឬ?"</string>
+    <string name="some_entries_selected_month_deletion_confirmation_dialog" msgid="3712014725077445591">"លុបធាតុដែលបានជ្រើសរើសជាអចិន្ត្រៃយ៍សម្រាប់ខែ<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> ឬ?"</string>
+    <string name="one_entry_selected_deletion_confirmation_dialog" msgid="4642573082594021789">"លុបធាតុនេះជាអចិន្ត្រៃយ៍ឬ?"</string>
+    <string name="all_app_entries_selected_day_deletion_confirmation_dialog" msgid="2342034541791960151">"លុបធាតុ <xliff:g id="APP_NAME">%1$s</xliff:g> ទាំងអស់ជាអចិន្រ្តៃយ៍សម្រាប់ថ្ងៃទី <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> ឬ?"</string>
+    <string name="all_app_entries_selected_week_deletion_confirmation_dialog" msgid="24289763841770386">"លុបធាតុ <xliff:g id="APP_NAME">%1$s</xliff:g> ទាំងអស់ជាអចិន្រ្តៃយ៍សម្រាប់សប្តាហ៍នៃថ្ងៃទី <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> ឬ?"</string>
+    <string name="all_app_entries_selected_month_deletion_confirmation_dialog" msgid="3240581815583269052">"លុបធាតុ <xliff:g id="APP_NAME">%1$s</xliff:g> ទាំងអស់ជាអចិន្រ្តៃយ៍សម្រាប់ថ្ងៃទី <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> ឬ?"</string>
+    <string name="some_app_entries_selected_day_deletion_confirmation_dialog" msgid="1030347169774815676">"លុបធាតុ <xliff:g id="APP_NAME">%1$s</xliff:g> ដែលបានជ្រើសរើសជាអចិន្ត្រៃយ៍សម្រាប់ថ្ងៃទី <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> ឬ?"</string>
+    <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"លុបធាតុ <xliff:g id="APP_NAME">%1$s</xliff:g> ដែលបានជ្រើសរើសជាអចិន្ត្រៃយ៍សម្រាប់សប្តាហ៍នៃថ្ងៃទី <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> ឬ?"</string>
+    <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"លុបធាតុ <xliff:g id="APP_NAME">%1$s</xliff:g> ដែលបានជ្រើសរើសជាអចិន្ត្រៃយ៍សម្រាប់ខែ<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> ឬ?"</string>
+    <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"លុបធាតុ <xliff:g id="APP_NAME">%s</xliff:g> នេះជាអចិន្ត្រៃយ៍ឬ?"</string>
 </resources>
