--- a/apk/res/values-kn/strings.xml
+++ b/apk/res/values-kn/strings.xml
@@ -276,48 +276,51 @@
     <string name="allergy_intolerance_uppercase_label" msgid="962905760867412783">"ಅಲರ್ಜಿಗಳು"</string>
     <string name="allergy_intolerance_lowercase_label" msgid="8705895234297776508">"ಅಲರ್ಜಿಗಳು"</string>
     <string name="allergy_intolerance_content_description" msgid="5938549394285540206">"ಅಲರ್ಜಿಗಳ ಡೇಟಾವನ್ನು ಓದಿ"</string>
+    <!-- no translation found for conditions_uppercase_label (5260404343402770877) -->
+    <skip />
+    <!-- no translation found for conditions_lowercase_label (2678248918552246997) -->
+    <skip />
+    <!-- no translation found for conditions_content_description (3230552343616193829) -->
+    <skip />
     <string name="immunization_uppercase_label" msgid="1467176749064014020">"ಇಮ್ಯುನೈಸೇಶನ್"</string>
     <string name="immunization_lowercase_label" msgid="6464922369026887687">"ಇಮ್ಯುನೈಸೇಶನ್"</string>
     <string name="immunization_content_description" msgid="2910674919337229803">"ಇಮ್ಯುನೈಸೇಶನ್ ಡೇಟಾವನ್ನು ಓದಿ"</string>
-    <!-- no translation found for laboratory_results_uppercase_label (2521886562709901654) -->
-    <skip />
-    <!-- no translation found for laboratory_results_lowercase_label (6437932041744631964) -->
-    <skip />
-    <!-- no translation found for laboratory_results_content_description (5882338877203692484) -->
-    <skip />
+    <string name="laboratory_results_uppercase_label" msgid="2521886562709901654">"ಲ್ಯಾಬೋರೇಟರಿ ಫಲಿತಾಂಶಗಳು"</string>
+    <string name="laboratory_results_lowercase_label" msgid="6437932041744631964">"ಲ್ಯಾಬೋರೇಟರಿ ಫಲಿತಾಂಶಗಳು"</string>
+    <string name="laboratory_results_content_description" msgid="5882338877203692484">"ಲ್ಯಾಬೋರೇಟರಿ ಫಲಿತಾಂಶಗಳನ್ನು ಓದಿರಿ"</string>
     <string name="medications_uppercase_label" msgid="4783281053427990225">"ಔಷಧಿಗಳು"</string>
     <string name="medications_lowercase_label" msgid="7808038774503092207">"ಔಷಧಿಗಳು"</string>
     <string name="medications_content_description" msgid="6165382876281780190">"ಔಷಧಿಗಳನ್ನು ಓದಿ"</string>
-    <!-- no translation found for pregnancy_uppercase_label (5979925175194337864) -->
+    <!-- no translation found for personal_details_uppercase_label (7241635933310394120) -->
     <skip />
-    <!-- no translation found for pregnancy_lowercase_label (810439290131044517) -->
+    <!-- no translation found for personal_details_lowercase_label (1907848447611775151) -->
     <skip />
-    <!-- no translation found for pregnancy_content_description (3436773729243586287) -->
+    <!-- no translation found for personal_details_content_description (3191211304673909831) -->
     <skip />
-    <!-- no translation found for problems_uppercase_label (4047882613795113715) -->
+    <!-- no translation found for practitioner_details_uppercase_label (2940667649808082510) -->
     <skip />
-    <!-- no translation found for problems_lowercase_label (6934298611508910866) -->
+    <!-- no translation found for practitioner_details_lowercase_label (8195591077717971542) -->
     <skip />
-    <!-- no translation found for problems_content_description (1549418294742668962) -->
+    <!-- no translation found for practitioner_details_content_description (8775396516928504185) -->
     <skip />
-    <!-- no translation found for procedures_uppercase_label (9176087520132593261) -->
+    <string name="pregnancy_uppercase_label" msgid="5979925175194337864">"ಗರ್ಭಧಾರಣೆ"</string>
+    <string name="pregnancy_lowercase_label" msgid="810439290131044517">"ಗರ್ಭಧಾರಣೆ"</string>
+    <string name="pregnancy_content_description" msgid="3436773729243586287">"ಗರ್ಭಧಾರಣೆಯ ಡೇಟಾವನ್ನು ಓದಿರಿ"</string>
+    <string name="procedures_uppercase_label" msgid="9176087520132593261">"ಕಾರ್ಯವಿಧಾನಗಳು"</string>
+    <string name="procedures_lowercase_label" msgid="5320804313946273234">"ಕಾರ್ಯವಿಧಾನಗಳು"</string>
+    <string name="procedures_content_description" msgid="1086900373141440005">"ಕಾರ್ಯವಿಧಾನಗಳನ್ನು ಓದಿರಿ"</string>
+    <string name="social_history_uppercase_label" msgid="1731364502071035544">"ಸಾಮಾಜಿಕ ಇತಿಹಾಸ"</string>
+    <string name="social_history_lowercase_label" msgid="9027541979445736412">"ಸಾಮಾಜಿಕ ಇತಿಹಾಸ"</string>
+    <string name="social_history_content_description" msgid="7187059309389849831">"ಬಳಕೆದಾರರ ಸಾಮಾಜಿಕ ಇತಿಹಾಸ ಡೇಟಾವನ್ನು ಓದಿರಿ"</string>
+    <!-- no translation found for visits_uppercase_label (8532619758336375886) -->
     <skip />
-    <!-- no translation found for procedures_lowercase_label (5320804313946273234) -->
+    <!-- no translation found for visits_lowercase_label (2545887061364564151) -->
     <skip />
-    <!-- no translation found for procedures_content_description (1086900373141440005) -->
+    <!-- no translation found for visits_content_description (6336796415049565697) -->
     <skip />
-    <!-- no translation found for social_history_uppercase_label (1731364502071035544) -->
-    <skip />
-    <!-- no translation found for social_history_lowercase_label (9027541979445736412) -->
-    <skip />
-    <!-- no translation found for social_history_content_description (7187059309389849831) -->
-    <skip />
-    <!-- no translation found for vital_signs_uppercase_label (214938594708280346) -->
-    <skip />
-    <!-- no translation found for vital_signs_lowercase_label (9141304492316454529) -->
-    <skip />
-    <!-- no translation found for vital_signs_content_description (914944352640528612) -->
-    <skip />
+    <string name="vital_signs_uppercase_label" msgid="214938594708280346">"ಪ್ರಮುಖ ಆರೋಗ್ಯ ಮಾಪನಗಳು"</string>
+    <string name="vital_signs_lowercase_label" msgid="9141304492316454529">"ಪ್ರಮುಖ ಆರೋಗ್ಯ ಮಾಪನಗಳು"</string>
+    <string name="vital_signs_content_description" msgid="914944352640528612">"ಪ್ರಮುಖ ಆರೋಗ್ಯ ಮಾಪನಗಳ ಕುರಿತ ಡೇಟಾವನ್ನು ಓದಿರಿ"</string>
     <string name="mindfulness_uppercase_label" msgid="7678646522566275472">"ಜಾಗರೂಕತೆ ಸೆಶನ್"</string>
     <string name="mindfulness_lowercase_label" msgid="5184488636180881614">"ಜಾಗರೂಕತೆ ಸೆಶನ್"</string>
     <string name="mindfulness_read_content_description" msgid="739187536826062524">"ಜಾಗರೂಕತೆ ಸೆಶನ್‌ನ ಡೇಟಾವನ್ನು ಓದಿ"</string>
@@ -341,29 +344,22 @@
     <string name="permissions_disconnect_dialog_message_history" msgid="3793206180295111081">"<xliff:g id="APP_NAME">%1$s</xliff:g> ಗೆ ಹಿನ್ನೆಲೆ ಡೇಟಾ ಸೇರಿದಂತೆ Health Connect ನಿಂದ ಯಾವುದೇ ಡೇಟಾವನ್ನು ಓದಲು ಅಥವಾ ಬರೆಯಲು ಇನ್ನು ಮುಂದೆ ಸಾಧ್ಯವಾಗುವುದಿಲ್ಲ.\n\nಈ ಆ್ಯಪ್ ಹೊಂದಿರಬಹುದಾದ ಸ್ಥಳ, ಕ್ಯಾಮರಾ ಅಥವಾ ಮೈಕ್ರೊಫೋನ್‌ನಂತಹ ಇತರ ಅನುಮತಿಗಳ ಮೇಲೆ ಇದು ಪರಿಣಾಮ ಬೀರುವುದಿಲ್ಲ."</string>
     <string name="permissions_disconnect_dialog_message_combined" msgid="4163369526932602203">"<xliff:g id="APP_NAME">%1$s</xliff:g> ಗೆ ಹಿನ್ನೆಲೆ ಮತ್ತು ಹಿಂದಿನ ಡೇಟಾ ಸೇರಿದಂತೆ Health Connect ನಿಂದ ಯಾವುದೇ ಡೇಟಾವನ್ನು ಓದಲು ಅಥವಾ ಬರೆಯಲು ಇನ್ನು ಮುಂದೆ ಸಾಧ್ಯವಾಗುವುದಿಲ್ಲ.\n\nಈ ಆ್ಯಪ್ ಹೊಂದಿರಬಹುದಾದ ಸ್ಥಳ, ಕ್ಯಾಮರಾ ಅಥವಾ ಮೈಕ್ರೊಫೋನ್‌ನಂತಹ ಇತರ ಅನುಮತಿಗಳ ಮೇಲೆ ಇದು ಪರಿಣಾಮ ಬೀರುವುದಿಲ್ಲ."</string>
     <string name="permissions_disconnect_dialog_checkbox" msgid="8646951566431872823">"Health Connect ನಿಂದ <xliff:g id="APP_NAME">%1$s</xliff:g> ಡೇಟಾವನ್ನು ಸಹ ಅಳಿಸಿ"</string>
-    <!-- no translation found for disconnect_all_health_permissions_title (3995410660376966233) -->
-    <skip />
-    <!-- no translation found for disconnect_all_medical_permissions_title (735315242997370168) -->
-    <skip />
-    <!-- no translation found for disconnect_all_fitness_permissions_title (7612364222525900592) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_no_additional_permissions_dialog_message (211728516196974197) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_and_background_permissions_dialog_message (654533675296670869) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_and_historical_permissions_dialog_message (6743215620789357899) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_and_additional_permissions_dialog_message (6062891741278986209) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_permissions_dialog_checkbox (762880061016391846) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_permissions_success_toast (9010063821116197894) -->
-    <skip />
+    <string name="disconnect_all_health_permissions_title" msgid="3995410660376966233">"ಎಲ್ಲಾ ಅನುಮತಿಗಳನ್ನು ತೆಗೆದುಹಾಕಬೇಕೆ?"</string>
+    <string name="disconnect_all_medical_permissions_title" msgid="735315242997370168">"ಎಲ್ಲಾ ಆರೋಗ್ಯ ಸಂಬಂಧಿತ ರೆಕಾರ್ಡ್ ಅನುಮತಿಗಳನ್ನು ತೆಗೆದುಹಾಕಬೇಕೆ?"</string>
+    <string name="disconnect_all_fitness_permissions_title" msgid="7612364222525900592">"ಎಲ್ಲಾ ಫಿಟ್‌ನೆಸ್ ಮತ್ತು ವೆಲ್‌ನೆಸ್ ಅನುಮತಿಗಳನ್ನು ತೆಗೆದುಹಾಕಬೇಕೆ?"</string>
+    <string name="disconnect_all_health_no_additional_permissions_dialog_message" msgid="211728516196974197">"<xliff:g id="APP_NAME">%1$s</xliff:g> ಗೆ ಇನ್ನು ಮುಂದೆ Health Connect ನಿಂದ ಡೇಟಾವನ್ನು ಓದಲು ಅಥವಾ ಬರೆಯಲು ಸಾಧ್ಯವಾಗುವುದಿಲ್ಲ.\n\nಇದು ಈ ಆ್ಯಪ್ ಹೊಂದಿರಬಹುದಾದ ಸ್ಥಳ, ಕ್ಯಾಮರಾ ಅಥವಾ ಮೈಕ್ರೊಫೋನ್‌ನಂತಹ ಇತರ ಅನುಮತಿಗಳ ಮೇಲೆ ಯಾವುದೇ ಪ್ರಭಾವ ಬೀರುವುದಿಲ್ಲ."</string>
+    <string name="disconnect_all_health_and_background_permissions_dialog_message" msgid="654533675296670869">"<xliff:g id="APP_NAME">%1$s</xliff:g> ಗೆ ಹಿನ್ನೆಲೆ ಡೇಟಾ ಸೇರಿದಂತೆ Health Connect ನಿಂದ ಡೇಟಾವನ್ನು ಓದಲು ಅಥವಾ ಬರೆಯಲು ಇನ್ನು ಮುಂದೆ ಸಾಧ್ಯವಾಗುವುದಿಲ್ಲ.\n\nಈ ಆ್ಯಪ್ ಹೊಂದಿರಬಹುದಾದ ಕ್ಯಾಮರಾ, ಮೈಕ್ರೊಫೋನ್ ಅಥವಾ ಸ್ಥಳದಂತಹ ಇತರ ಅನುಮತಿಗಳ ಮೇಲೆ ಇದು ಪರಿಣಾಮ ಬೀರುವುದಿಲ್ಲ."</string>
+    <string name="disconnect_all_health_and_historical_permissions_dialog_message" msgid="6743215620789357899">"<xliff:g id="APP_NAME">%1$s</xliff:g> ಗೆ ಹಿಂದಿನ ಡೇಟಾ ಸೇರಿದಂತೆ Health Connect ನಿಂದ ಡೇಟಾವನ್ನು ಓದಲು ಅಥವಾ ಬರೆಯಲು ಇನ್ನು ಮುಂದೆ ಸಾಧ್ಯವಾಗುವುದಿಲ್ಲ.\n\nಈ ಆ್ಯಪ್ ಹೊಂದಿರಬಹುದಾದ ಕ್ಯಾಮರಾ, ಮೈಕ್ರೊಫೋನ್ ಅಥವಾ ಸ್ಥಳದಂತಹ ಇತರ ಅನುಮತಿಗಳ ಮೇಲೆ ಇದು ಪರಿಣಾಮ ಬೀರುವುದಿಲ್ಲ."</string>
+    <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> ಗೆ ಹಿನ್ನೆಲೆ ಮತ್ತು ಹಿಂದಿನ ಡೇಟಾ ಸೇರಿದಂತೆ Health Connect ನಿಂದ ಡೇಟಾವನ್ನು ಓದಲು ಅಥವಾ ಬರೆಯಲು ಇನ್ನು ಮುಂದೆ ಸಾಧ್ಯವಾಗುವುದಿಲ್ಲ.\n\nಈ ಆ್ಯಪ್ ಹೊಂದಿರಬಹುದಾದ ಕ್ಯಾಮರಾ, ಮೈಕ್ರೊಫೋನ್ ಅಥವಾ ಸ್ಥಳದಂತಹ ಇತರ ಅನುಮತಿಗಳ ಮೇಲೆ ಇದು ಪರಿಣಾಮ ಬೀರುವುದಿಲ್ಲ."</string>
+    <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"<xliff:g id="APP_NAME">%1$s</xliff:g> ಆ್ಯಪ್‌ನ Health Connect ನಲ್ಲಿನ ಫಿಟ್‌ನೆಸ್ ಡೇಟಾ ಮತ್ತು ಆರೋಗ್ಯ ದಾಖಲೆಗಳನ್ನು ಸಹ ಅಳಿಸಿ"</string>
+    <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"ಈ ಆ್ಯಪ್‌ಗೆ ಅನುಮತಿಗಳನ್ನು ತೆಗೆದುಹಾಕಲಾಗಿದೆ"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"ಮುಂದಿನ ದಿನ"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"ಆಯ್ಕೆ ಮಾಡಿದ ದಿನ"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"ಹಿಂದಿನ ದಿನ"</string>
     <string name="default_error" msgid="7966868260616403475">"ಏನೋ ಸಮಸ್ಯೆ ಉಂಟಾಗಿದೆ. ಪುನಃ ಪ್ರಯತ್ನಿಸಿ."</string>
     <!-- no translation found for unkwown_resource (7932225227431922125) -->
+    <skip />
+    <!-- no translation found for raw_fhir_title (1295744907036066319) -->
     <skip />
     <!-- no translation found for raw_fhir_open_bracket (7974657451368655325) -->
     <skip />
@@ -391,8 +387,7 @@
     <string name="permissions_disconnect_all_dialog_disconnect" msgid="2134136493310257746">"ಎಲ್ಲವನ್ನೂ ತೆಗೆದುಹಾಕಿ"</string>
     <string name="manage_permissions_manage_app_header" msgid="6356348062088358761">"ಆ್ಯಪ್ ಅನ್ನು ನಿರ್ವಹಿಸಿ"</string>
     <string name="see_app_data" msgid="3951030076195119476">"ಆ್ಯಪ್ ಡೇಟಾ ನೋಡಿ"</string>
-    <!-- no translation found for remove_access_for_this_app (7701101420310711833) -->
-    <skip />
+    <string name="remove_access_for_this_app" msgid="7701101420310711833">"ಈ ಆ್ಯಪ್‌ಗೆ ಆ್ಯಕ್ಸೆಸ್ ಅನ್ನು ತೆಗೆದುಹಾಕಿ"</string>
     <string name="delete_app_data" msgid="6890357774873859952">"ಆ್ಯಪ್ ಡೇಟಾ ಅಳಿಸಿ"</string>
     <string name="inactive_apps_section_title" msgid="7492812973696378690">"ನಿಷ್ಕ್ರಿಯ ಆ್ಯಪ್‌ಗಳು"</string>
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"ಈ ಆ್ಯಪ್‌ಗಳು ಇನ್ನು ಮುಂದೆ ಆ್ಯಕ್ಸೆಸ್ ಹೊಂದಿರುವುದಿಲ್ಲ ಆದರೆ ಈಗಲೂ Health Connect ನಲ್ಲಿ ಸಂಗ್ರಹಿಸಲಾದ ಡೇಟಾ ಇರುತ್ತದೆ"</string>
@@ -460,8 +455,7 @@
     <string name="export_destination_title" msgid="8352929396306002479">"ನಿಗದಿತ ರಫ್ತು ಎಲ್ಲಿ ಸೇವ್ ಮಾಡಬೇಕೆಂದು ಆರಿಸಿ"</string>
     <string name="export_invalid_storage" msgid="1459055934301871321">"ನಿಮ್ಮ ಡೇಟಾವನ್ನು ರಫ್ತು ಮಾಡಲು ಕ್ಲೌಡ್‌ ಸಂಗ್ರಹಣೆಯ ಆ್ಯಪ್ ಅನ್ನು ಆಯ್ಕೆಮಾಡಿ"</string>
     <string name="export_default_file_name" msgid="1146984404965754445">"Health Connect"</string>
-    <!-- no translation found for export_default_file_name_with_sequence (2380551038319211752) -->
-    <skip />
+    <string name="export_default_file_name_with_sequence" msgid="2380551038319211752">"Health Connect (<xliff:g id="EXPORT_SEQUENTIAL_NUMBER">%1$s</xliff:g>)"</string>
     <string name="import_confirmation_dialog_title" msgid="1218478436676890997">"ಈ ಫೈಲ್ ಅನ್ನು ಇಂಪೋರ್ಟ್ ಮಾಡಿಕೊಳ್ಳಬೇಕೇ?"</string>
     <string name="import_confirmation_dialog_text" msgid="7274564242039735667">"<xliff:g id="FILE_NAME">%1$s</xliff:g> ಅನ್ನು Health Connect ಗೆ ಆಮದು ಮಾಡಿಕೊಳ್ಳಲಾಗುತ್ತದೆ"</string>
     <string name="import_confirmation_dialog_cancel_button" msgid="4323351978842360895">"ರದ್ದುಮಾಡಿ"</string>
@@ -504,6 +498,10 @@
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"Play Store ಗೆ ಹೋಗಿ"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"Health Connect ಬಳಕೆಯನ್ನು ಪ್ರಾರಂಭಿಸಿ"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect ನಿಮ್ಮ ಆರೋಗ್ಯ ಹಾಗೂ ಫಿಟ್‌ನೆಸ್ ಡೇಟಾವನ್ನು ಸಂಗ್ರಹಿಸುತ್ತದೆ, ಅದರಿಂದ ನಿಮ್ಮ ಸಾಧನದಲ್ಲಿರುವ ವಿವಿಧ ಆ್ಯಪ್‌ಗಳನ್ನು ಸಿಂಕ್ ಮಾಡಲು ನಿಮಗೆ ಸರಳವಾದ ಮಾರ್ಗವನ್ನು ಒದಗಿಸುತ್ತದೆ"</string>
+    <!-- no translation found for onboarding_description_health_records (6816666836571797870) -->
+    <skip />
+    <!-- no translation found for onboarding_description_with_health_connect (8751881078749676542) -->
+    <skip />
     <string name="share_data" msgid="3481932156368883946">"ನಿಮ್ಮ ಆ್ಯಪ್‌ಗಳೊಂದಿಗೆ ಡೇಟಾವನ್ನು ಹಂಚಿಕೊಳ್ಳಿ"</string>
     <string name="share_data_description" msgid="2919871301634375092">"Health Connect ನಲ್ಲಿ ಪ್ರತಿ ಆ್ಯಪ್ ಓದಬಹುದಾದ ಅಥವಾ ಬರೆಯಬಹುದಾದ ಡೇಟಾವನ್ನು ಆಯ್ಕೆಮಾಡಿ"</string>
     <string name="manage_your_settings" msgid="7391184508015127137">"ನಿಮ್ಮ ಸೆಟ್ಟಿಂಗ್‌ಗಳು ಹಾಗೂ ಗೌಪ್ಯತೆಯನ್ನು ನಿರ್ವಹಿಸಿ"</string>
@@ -548,8 +546,7 @@
     <string name="confirming_question_data_type_from_app_all" msgid="8361163993548510509">"<xliff:g id="APP_DATA">%2$s</xliff:g> ಆ್ಯಪ್ ಮೂಲಕ ಸೇರಿಸಿದ ಎಲ್ಲಾ <xliff:g id="DATA_TYPE">%1$s</xliff:g> ಡೇಟಾವನ್ನು ಶಾಶ್ವತವಾಗಿ ಅಳಿಸಬೇಕೆ?"</string>
     <string name="confirming_question_single_entry" msgid="2064578008447638932">"Health Connect ನಿಂದ ಈ ನಮೂದನ್ನು ಶಾಶ್ವತವಾಗಿ ಅಳಿಸಬೇಕೇ?"</string>
     <string name="confirming_question_message" msgid="2934249835529079545">"ಕನೆಕ್ಟ್ ಮಾಡಲಾದ ಆ್ಯಪ್‌ಗಳಿಗೆ ಇನ್ನು ಮುಂದೆ Health Connect ನಲ್ಲಿನ ಈ ಡೇಟಾವನ್ನು ಆ್ಯಕ್ಸೆಸ್ ಮಾಡಲು ಸಾಧ್ಯವಾಗುವುದಿಲ್ಲ"</string>
-    <!-- no translation found for confirming_question_message_menstruation (944931041343695373) -->
-    <skip />
+    <string name="confirming_question_message_menstruation" msgid="944931041343695373">"ಇದು <xliff:g id="START_DATE">%1$s</xliff:g> ರಿಂದ <xliff:g id="END_DATE">%2$s</xliff:g> ವರೆಗಿನ ಎಲ್ಲಾ ಋತುಚಕ್ರದ ಡೇಟಾ ನಮೂದುಗಳನ್ನು ಅಳಿಸುತ್ತದೆ."</string>
     <string name="confirming_question_delete_button" msgid="1999996759507959985">"ಅಳಿಸಿ"</string>
     <string name="confirming_question_go_back_button" msgid="9037523726124648221">"ಹಿಂದಿರುಗಿ"</string>
     <string name="delete_dialog_success_got_it_button" msgid="8047812840310612293">"ಮುಗಿದಿದೆ"</string>
