--- a/apk/res/values-ml/strings.xml
+++ b/apk/res/values-ml/strings.xml
@@ -267,39 +267,54 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"ചർമ്മത്തിലെ താപനില"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"ചർമ്മത്തിലെ താപനില വായിക്കുക"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"ചർമ്മത്തിലെ താപനില എഴുതുക"</string>
-    <!-- no translation found for all_medical_data_uppercase_label (2380759160541898783) -->
-    <skip />
-    <!-- no translation found for all_medical_data_lowercase_label (6293814928992081842) -->
-    <skip />
-    <!-- no translation found for all_medical_data_content_description (4846586780533295022) -->
-    <skip />
+    <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"എല്ലാ ആരോഗ്യ റെക്കോർഡുകളും"</string>
+    <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"എല്ലാ ആരോഗ്യ റെക്കോർഡുകളും"</string>
+    <string name="all_medical_data_content_description" msgid="4846586780533295022">"എല്ലാ ആരോഗ്യ റെക്കോർഡുകളും എഴുതുക"</string>
     <string name="allergy_intolerance_uppercase_label" msgid="962905760867412783">"അലർജികൾ"</string>
     <string name="allergy_intolerance_lowercase_label" msgid="8705895234297776508">"അലർജികൾ"</string>
     <string name="allergy_intolerance_content_description" msgid="5938549394285540206">"അലർജി സംബന്ധിച്ച ഡാറ്റ വായിക്കുക"</string>
+    <!-- no translation found for conditions_uppercase_label (5260404343402770877) -->
+    <skip />
+    <!-- no translation found for conditions_lowercase_label (2678248918552246997) -->
+    <skip />
+    <!-- no translation found for conditions_content_description (3230552343616193829) -->
+    <skip />
     <string name="immunization_uppercase_label" msgid="1467176749064014020">"പ്രതിരോധ കുത്തിവയ്പ്പ്"</string>
     <string name="immunization_lowercase_label" msgid="6464922369026887687">"പ്രതിരോധ കുത്തിവയ്പ്പ്"</string>
     <string name="immunization_content_description" msgid="2910674919337229803">"പ്രതിരോധ കുത്തിവയ്പ്പ് സംബന്ധിച്ച ഡാറ്റ വായിക്കുക"</string>
     <string name="laboratory_results_uppercase_label" msgid="2521886562709901654">"ലബോറട്ടറി ഫലങ്ങൾ"</string>
     <string name="laboratory_results_lowercase_label" msgid="6437932041744631964">"ലബോറട്ടറി ഫലങ്ങൾ"</string>
     <string name="laboratory_results_content_description" msgid="5882338877203692484">"ലബോറട്ടറി ഫലങ്ങൾ റീഡ് ചെയ്യുക"</string>
-    <!-- no translation found for medications_uppercase_label (4783281053427990225) -->
+    <string name="medications_uppercase_label" msgid="4783281053427990225">"മരുന്നുകൾ"</string>
+    <string name="medications_lowercase_label" msgid="7808038774503092207">"മരുന്നുകൾ"</string>
+    <string name="medications_content_description" msgid="6165382876281780190">"മരുന്നുകളുടെ ഡാറ്റ റീഡ് ചെയ്യുക"</string>
+    <!-- no translation found for personal_details_uppercase_label (7241635933310394120) -->
     <skip />
-    <!-- no translation found for medications_lowercase_label (7808038774503092207) -->
+    <!-- no translation found for personal_details_lowercase_label (1907848447611775151) -->
     <skip />
-    <!-- no translation found for medications_content_description (6165382876281780190) -->
+    <!-- no translation found for personal_details_content_description (3191211304673909831) -->
+    <skip />
+    <!-- no translation found for practitioner_details_uppercase_label (2940667649808082510) -->
+    <skip />
+    <!-- no translation found for practitioner_details_lowercase_label (8195591077717971542) -->
+    <skip />
+    <!-- no translation found for practitioner_details_content_description (8775396516928504185) -->
     <skip />
     <string name="pregnancy_uppercase_label" msgid="5979925175194337864">"ഗർഭകാലം"</string>
     <string name="pregnancy_lowercase_label" msgid="810439290131044517">"ഗർഭകാലം"</string>
     <string name="pregnancy_content_description" msgid="3436773729243586287">"ഗർഭകാല ഡാറ്റ റീഡ് ചെയ്യുക"</string>
-    <string name="problems_uppercase_label" msgid="4047882613795113715">"പ്രശ്‌നങ്ങൾ"</string>
-    <string name="problems_lowercase_label" msgid="6934298611508910866">"പ്രശ്‌നങ്ങൾ"</string>
-    <string name="problems_content_description" msgid="1549418294742668962">"പ്രശ്നങ്ങൾ റീഡ് ചെയ്യുക"</string>
     <string name="procedures_uppercase_label" msgid="9176087520132593261">"നടപടിക്രമങ്ങൾ"</string>
     <string name="procedures_lowercase_label" msgid="5320804313946273234">"നടപടിക്രമങ്ങൾ"</string>
     <string name="procedures_content_description" msgid="1086900373141440005">"നടപടിക്രമങ്ങൾ റീഡ് ചെയ്യുക"</string>
     <string name="social_history_uppercase_label" msgid="1731364502071035544">"സാമൂഹിക ചരിത്രം"</string>
     <string name="social_history_lowercase_label" msgid="9027541979445736412">"സാമൂഹിക ചരിത്രം"</string>
     <string name="social_history_content_description" msgid="7187059309389849831">"സാമൂഹിക ചരിത്രം റീഡ് ചെയ്യുക"</string>
+    <!-- no translation found for visits_uppercase_label (8532619758336375886) -->
+    <skip />
+    <!-- no translation found for visits_lowercase_label (2545887061364564151) -->
+    <skip />
+    <!-- no translation found for visits_content_description (6336796415049565697) -->
+    <skip />
     <string name="vital_signs_uppercase_label" msgid="214938594708280346">"പ്രധാന ആരോഗ്യ വിവരങ്ങൾ"</string>
     <string name="vital_signs_lowercase_label" msgid="9141304492316454529">"പ്രധാന ആരോഗ്യ വിവരങ്ങൾ"</string>
     <string name="vital_signs_content_description" msgid="914944352640528612">"പ്രധാന ആരോഗ്യ വിവരങ്ങൾ റീഡ് ചെയ്യുക"</string>
@@ -339,18 +354,13 @@
     <string name="navigation_selected_day" msgid="2510843479734091348">"തിരഞ്ഞെടുത്ത ദിവസം"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"മുമ്പത്തെ ദിവസം"</string>
     <string name="default_error" msgid="7966868260616403475">"എന്തോ കുഴപ്പമുണ്ടായി. വീണ്ടും ശ്രമിക്കുക."</string>
-    <!-- no translation found for unkwown_resource (7932225227431922125) -->
-    <skip />
-    <!-- no translation found for raw_fhir_open_bracket (7974657451368655325) -->
-    <skip />
-    <!-- no translation found for raw_fhir_closed_bracket (9084379463440675078) -->
-    <skip />
-    <!-- no translation found for raw_fhir_field_value (369633095565031835) -->
-    <skip />
-    <!-- no translation found for raw_fhir_value (8627152854130338531) -->
-    <skip />
-    <!-- no translation found for raw_fhir_content_description (1491420802097635439) -->
-    <skip />
+    <string name="unkwown_resource" msgid="7932225227431922125">"അജ്ഞാത വിഭവസാമഗ്രി"</string>
+    <string name="raw_fhir_title" msgid="1295744907036066319">"ഉറവിട ഡാറ്റ"</string>
+    <string name="raw_fhir_open_bracket" msgid="7974657451368655325">"<xliff:g id="PREFIX">%1$s</xliff:g>ഓപ്പൺ ബ്രാക്കറ്റ്."</string>
+    <string name="raw_fhir_closed_bracket" msgid="9084379463440675078">"<xliff:g id="PREFIX">%1$s</xliff:g>ക്ലോസ്ഡ് ബ്രാക്കറ്റ്."</string>
+    <string name="raw_fhir_field_value" msgid="369633095565031835">"<xliff:g id="PREFIX">%1$s</xliff:g> ഫീൽഡ് <xliff:g id="FIELD">%2$s</xliff:g> മൂല്യം"</string>
+    <string name="raw_fhir_value" msgid="8627152854130338531">"<xliff:g id="PREFIX">%1$s</xliff:g>: <xliff:g id="VALUE">%2$s</xliff:g>."</string>
+    <string name="raw_fhir_content_description" msgid="1491420802097635439">"വിശദമായ സോഴ്സ് കോഡ്: <xliff:g id="SOURCE_CODE">%1$s</xliff:g>"</string>
     <string name="health_permission_header_description" msgid="7497601695462373927">"ഈ അനുമതിയുള്ള ആപ്പുകൾക്ക് നിങ്ങളുടെ ആരോഗ്യവും ഫിറ്റ്‍നസും സംബന്ധിച്ച ഡാറ്റ റീഡ് ചെയ്യാനും റൈറ്റ് ചെയ്യാനുമാകും."</string>
     <string name="connected_apps_text" msgid="1177626440966855831">"Health Connect-ൽ സംഭരിച്ച ഡാറ്റ ഏതെല്ലാം ആപ്പുകൾക്ക് ആക്‌സസ് ചെയ്യാനാകുമെന്നത് നിയന്ത്രിക്കുക. ഒരു ആപ്പിന് റീഡ് ചെയ്യാനോ റൈറ്റ് ചെയ്യാനോ കഴിയുന്ന ഡാറ്റ അവലോകനം ചെയ്യാൻ ആപ്പിൽ ടാപ്പ് ചെയ്യുക."</string>
     <string name="connected_apps_section_title" msgid="2415288099612126258">"ആക്സസിന് അനുമതി നൽകിയവ"</string>
@@ -478,6 +488,10 @@
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"Play Store-ലേക്ക് പോകുക"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"Health Connect ഉപയോഗിച്ച് തുടങ്ങൂ"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"നിങ്ങളുടെ ആരോഗ്യവും ഫിറ്റ്നസും സംബന്ധിച്ച ഡാറ്റ Health Connect സംഭരിക്കുന്നു, ഇതിലൂടെ നിങ്ങളുടെ ഉപകരണത്തിലെ വ്യത്യസ്ത ആപ്പുകൾ എളുപ്പത്തിൽ സമന്വയിപ്പിക്കാനാകും"</string>
+    <!-- no translation found for onboarding_description_health_records (6816666836571797870) -->
+    <skip />
+    <!-- no translation found for onboarding_description_with_health_connect (8751881078749676542) -->
+    <skip />
     <string name="share_data" msgid="3481932156368883946">"നിങ്ങളുടെ ആപ്പുകളുമായി ഡാറ്റ പങ്കിടുക"</string>
     <string name="share_data_description" msgid="2919871301634375092">"ഓരോ ആപ്പിനും റീഡ് ചെയ്യാനോ Health Connect-ലേക്ക് റൈറ്റ് ചെയ്യാനോ കഴിയുന്ന ഡാറ്റ തിരഞ്ഞെടുക്കുക"</string>
     <string name="manage_your_settings" msgid="7391184508015127137">"നിങ്ങളുടെ ക്രമീകരണവും സ്വകാര്യതയും മാനേജ് ചെയ്യുക"</string>
@@ -1072,42 +1086,23 @@
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Health Connect വഴി <xliff:g id="APP_NAME">%s</xliff:g> എന്നതിലേക്ക് സമന്വയിപ്പിക്കാൻ കൂടുതൽ ആപ്പുകൾ കണ്ടെത്തുക"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"ആപ്പ് സ്‌റ്റോറിൽ കാണുക"</string>
     <string name="select_all" msgid="837499881590001166">"എല്ലാം തിരഞ്ഞെടുക്കുക"</string>
-    <!-- no translation found for deletion_confirmation_dialog_body (7643182907084645805) -->
-    <skip />
-    <!-- no translation found for all_data_selected_deletion_confirmation_dialog (2103387413531373305) -->
-    <skip />
-    <!-- no translation found for some_data_selected_deletion_confirmation_dialog (2466281529240054537) -->
-    <skip />
-    <!-- no translation found for all_app_data_selected_deletion_confirmation_dialog (1077157006579195958) -->
-    <skip />
-    <!-- no translation found for some_app_data_selected_deletion_confirmation_dialog (5378172524112070270) -->
-    <skip />
-    <!-- no translation found for all_entries_selected_day_deletion_confirmation_dialog (2887646600541520444) -->
-    <skip />
-    <!-- no translation found for all_entries_selected_week_deletion_confirmation_dialog (6759608395185369048) -->
-    <skip />
-    <!-- no translation found for all_entries_selected_month_deletion_confirmation_dialog (6030161837387559132) -->
-    <skip />
-    <!-- no translation found for some_entries_selected_day_deletion_confirmation_dialog (3481363886097542565) -->
-    <skip />
-    <!-- no translation found for some_entries_selected_week_deletion_confirmation_dialog (7150217982297131340) -->
-    <skip />
-    <!-- no translation found for some_entries_selected_month_deletion_confirmation_dialog (3712014725077445591) -->
-    <skip />
-    <!-- no translation found for one_entry_selected_deletion_confirmation_dialog (4642573082594021789) -->
-    <skip />
-    <!-- no translation found for all_app_entries_selected_day_deletion_confirmation_dialog (2342034541791960151) -->
-    <skip />
-    <!-- no translation found for all_app_entries_selected_week_deletion_confirmation_dialog (24289763841770386) -->
-    <skip />
-    <!-- no translation found for all_app_entries_selected_month_deletion_confirmation_dialog (3240581815583269052) -->
-    <skip />
-    <!-- no translation found for some_app_entries_selected_day_deletion_confirmation_dialog (1030347169774815676) -->
-    <skip />
-    <!-- no translation found for some_app_entries_selected_week_deletion_confirmation_dialog (8009352719322914060) -->
-    <skip />
-    <!-- no translation found for some_app_entries_selected_month_deletion_confirmation_dialog (6617805533334875710) -->
-    <skip />
-    <!-- no translation found for one_app_entry_selected_deletion_confirmation_dialog (7101939753210640660) -->
-    <skip />
+    <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"കണക്‌റ്റ് ചെയ്‌തിട്ടുള്ള ആപ്പുകൾക്ക് ഇനി Health Connect-ൽ നിന്ന് ഈ ഡാറ്റ വായിക്കാനാകില്ല"</string>
+    <string name="all_data_selected_deletion_confirmation_dialog" msgid="2103387413531373305">"എല്ലാ ഡാറ്റയും ശാശ്വതമായി ഇല്ലാതാക്കണോ?"</string>
+    <string name="some_data_selected_deletion_confirmation_dialog" msgid="2466281529240054537">"തിരഞ്ഞെടുത്ത ഡാറ്റ ശാശ്വതമായി ഇല്ലാതാക്കണോ?"</string>
+    <string name="all_app_data_selected_deletion_confirmation_dialog" msgid="1077157006579195958">"എല്ലാ <xliff:g id="APP_NAME">%s</xliff:g> ഡാറ്റയും ശാശ്വതമായി ഇല്ലാതാക്കണോ?"</string>
+    <string name="some_app_data_selected_deletion_confirmation_dialog" msgid="5378172524112070270">"തിരഞ്ഞെടുത്ത <xliff:g id="APP_NAME">%s</xliff:g> ഡാറ്റ ശാശ്വതമായി ഇല്ലാതാക്കണോ?"</string>
+    <string name="all_entries_selected_day_deletion_confirmation_dialog" msgid="2887646600541520444">"<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> എന്ന ദിവസത്തെ എല്ലാ എൻട്രികളും ശാശ്വതമായി ഇല്ലാതാക്കണോ?"</string>
+    <string name="all_entries_selected_week_deletion_confirmation_dialog" msgid="6759608395185369048">"<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> എന്ന ആഴ്ചയിലെ എല്ലാ എൻട്രികളും ശാശ്വതമായി ഇല്ലാതാക്കണോ?"</string>
+    <string name="all_entries_selected_month_deletion_confirmation_dialog" msgid="6030161837387559132">"<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> എന്ന മാസത്തെ എല്ലാ എൻട്രികളും ശാശ്വതമായി ഇല്ലാതാക്കണോ?"</string>
+    <string name="some_entries_selected_day_deletion_confirmation_dialog" msgid="3481363886097542565">"<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> എന്ന ദിവസത്തേക്കുള്ള തിരഞ്ഞെടുത്ത എൻട്രികൾ ശാശ്വതമായി ഇല്ലാതാക്കണോ?"</string>
+    <string name="some_entries_selected_week_deletion_confirmation_dialog" msgid="7150217982297131340">"<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> എന്ന ആഴ്ചയിലേക്കുള്ള തിരഞ്ഞെടുത്ത എൻട്രികൾ ശാശ്വതമായി ഇല്ലാതാക്കണോ?"</string>
+    <string name="some_entries_selected_month_deletion_confirmation_dialog" msgid="3712014725077445591">"<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> എന്ന മാസത്തേക്കുള്ള തിരഞ്ഞെടുത്ത എൻട്രികൾ ശാശ്വതമായി ഇല്ലാതാക്കണോ?"</string>
+    <string name="one_entry_selected_deletion_confirmation_dialog" msgid="4642573082594021789">"ഈ എൻട്രി ശാശ്വതമായി ഇല്ലാതാക്കണോ?"</string>
+    <string name="all_app_entries_selected_day_deletion_confirmation_dialog" msgid="2342034541791960151">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> എന്ന ദിവസത്തെ എല്ലാ <xliff:g id="APP_NAME">%1$s</xliff:g> എൻട്രികളും ശാശ്വതമായി ഇല്ലാതാക്കണോ?"</string>
+    <string name="all_app_entries_selected_week_deletion_confirmation_dialog" msgid="24289763841770386">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> എന്ന ആഴ്ചയിലെ എല്ലാ <xliff:g id="APP_NAME">%1$s</xliff:g> എൻട്രികളും ശാശ്വതമായി ഇല്ലാതാക്കണോ?"</string>
+    <string name="all_app_entries_selected_month_deletion_confirmation_dialog" msgid="3240581815583269052">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> എന്ന മാസത്തെ എല്ലാ <xliff:g id="APP_NAME">%1$s</xliff:g> എൻട്രികളും ശാശ്വതമായി ഇല്ലാതാക്കണോ?"</string>
+    <string name="some_app_entries_selected_day_deletion_confirmation_dialog" msgid="1030347169774815676">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> എന്ന ദിവസത്തേക്കുള്ള തിരഞ്ഞെടുത്ത <xliff:g id="APP_NAME">%1$s</xliff:g> എൻട്രികൾ ശാശ്വതമായി ഇല്ലാതാക്കണോ?"</string>
+    <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> എന്ന ആഴ്ചയിലേക്കുള്ള തിരഞ്ഞെടുത്ത <xliff:g id="APP_NAME">%1$s</xliff:g> എൻട്രികൾ ശാശ്വതമായി ഇല്ലാതാക്കണോ?"</string>
+    <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> എന്ന മാസത്തേക്കുള്ള തിരഞ്ഞെടുത്ത <xliff:g id="APP_NAME">%1$s</xliff:g> എൻട്രികൾ ശാശ്വതമായി ഇല്ലാതാക്കണോ?"</string>
+    <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"ഈ <xliff:g id="APP_NAME">%s</xliff:g> എൻട്രി ശാശ്വതമായി ഇല്ലാതാക്കണോ?"</string>
 </resources>
