--- a/apk/res/values-my/strings.xml
+++ b/apk/res/values-my/strings.xml
@@ -276,51 +276,51 @@
     <string name="allergy_intolerance_uppercase_label" msgid="962905760867412783">"ဓာတ်မတည့်မှုများ"</string>
     <string name="allergy_intolerance_lowercase_label" msgid="8705895234297776508">"ဓာတ်မတည့်မှုများ"</string>
     <string name="allergy_intolerance_content_description" msgid="5938549394285540206">"ဓာတ်မတည့်မှုများကို ဖတ်ရန်"</string>
+    <!-- no translation found for conditions_uppercase_label (5260404343402770877) -->
+    <skip />
+    <!-- no translation found for conditions_lowercase_label (2678248918552246997) -->
+    <skip />
+    <!-- no translation found for conditions_content_description (3230552343616193829) -->
+    <skip />
     <string name="immunization_uppercase_label" msgid="1467176749064014020">"ကာကွယ်ဆေးထိုးခြင်း"</string>
     <string name="immunization_lowercase_label" msgid="6464922369026887687">"ကာကွယ်ဆေးထိုးခြင်း"</string>
     <string name="immunization_content_description" msgid="2910674919337229803">"ကာကွယ်ဆေးထိုးခြင်းကို ဖတ်ရန်"</string>
-    <!-- no translation found for laboratory_results_uppercase_label (2521886562709901654) -->
+    <string name="laboratory_results_uppercase_label" msgid="2521886562709901654">"ဓာတ်ခွဲခန်း ရလဒ်များ"</string>
+    <string name="laboratory_results_lowercase_label" msgid="6437932041744631964">"ဓာတ်ခွဲခန်း ရလဒ်များ"</string>
+    <string name="laboratory_results_content_description" msgid="5882338877203692484">"ဓာတ်ခွဲခန်း ရလဒ်များကို ဖတ်ရန်"</string>
+    <string name="medications_uppercase_label" msgid="4783281053427990225">"ဆေးဝါးများ"</string>
+    <string name="medications_lowercase_label" msgid="7808038774503092207">"ဆေးဝါးများ"</string>
+    <string name="medications_content_description" msgid="6165382876281780190">"ဆေးဝါးများအကြောင်း ဖတ်ရန်"</string>
+    <!-- no translation found for personal_details_uppercase_label (7241635933310394120) -->
     <skip />
-    <!-- no translation found for laboratory_results_lowercase_label (6437932041744631964) -->
+    <!-- no translation found for personal_details_lowercase_label (1907848447611775151) -->
     <skip />
-    <!-- no translation found for laboratory_results_content_description (5882338877203692484) -->
+    <!-- no translation found for personal_details_content_description (3191211304673909831) -->
     <skip />
-    <!-- no translation found for medications_uppercase_label (4783281053427990225) -->
+    <!-- no translation found for practitioner_details_uppercase_label (2940667649808082510) -->
     <skip />
-    <!-- no translation found for medications_lowercase_label (7808038774503092207) -->
+    <!-- no translation found for practitioner_details_lowercase_label (8195591077717971542) -->
     <skip />
-    <!-- no translation found for medications_content_description (6165382876281780190) -->
+    <!-- no translation found for practitioner_details_content_description (8775396516928504185) -->
     <skip />
-    <!-- no translation found for pregnancy_uppercase_label (5979925175194337864) -->
+    <string name="pregnancy_uppercase_label" msgid="5979925175194337864">"ကိုယ်ဝန်ဆောင်ခြင်း"</string>
+    <string name="pregnancy_lowercase_label" msgid="810439290131044517">"ကိုယ်ဝန်ဆောင်ခြင်း"</string>
+    <string name="pregnancy_content_description" msgid="3436773729243586287">"ကိုယ်ဝန်ဆောင်ခြင်းကို ဖတ်ရန်"</string>
+    <string name="procedures_uppercase_label" msgid="9176087520132593261">"လုပ်ငန်းစဉ်များ"</string>
+    <string name="procedures_lowercase_label" msgid="5320804313946273234">"လုပ်ငန်းစဉ်များ"</string>
+    <string name="procedures_content_description" msgid="1086900373141440005">"လုပ်ငန်းစဉ်များကို ဖတ်ရန်"</string>
+    <string name="social_history_uppercase_label" msgid="1731364502071035544">"လူနေမှုမှတ်တမ်း"</string>
+    <string name="social_history_lowercase_label" msgid="9027541979445736412">"လူနေမှုမှတ်တမ်း"</string>
+    <string name="social_history_content_description" msgid="7187059309389849831">"လူနေမှုမှတ်တမ်းကို ဖတ်ရန်"</string>
+    <!-- no translation found for visits_uppercase_label (8532619758336375886) -->
     <skip />
-    <!-- no translation found for pregnancy_lowercase_label (810439290131044517) -->
+    <!-- no translation found for visits_lowercase_label (2545887061364564151) -->
     <skip />
-    <!-- no translation found for pregnancy_content_description (3436773729243586287) -->
+    <!-- no translation found for visits_content_description (6336796415049565697) -->
     <skip />
-    <!-- no translation found for problems_uppercase_label (4047882613795113715) -->
-    <skip />
-    <!-- no translation found for problems_lowercase_label (6934298611508910866) -->
-    <skip />
-    <!-- no translation found for problems_content_description (1549418294742668962) -->
-    <skip />
-    <!-- no translation found for procedures_uppercase_label (9176087520132593261) -->
-    <skip />
-    <!-- no translation found for procedures_lowercase_label (5320804313946273234) -->
-    <skip />
-    <!-- no translation found for procedures_content_description (1086900373141440005) -->
-    <skip />
-    <!-- no translation found for social_history_uppercase_label (1731364502071035544) -->
-    <skip />
-    <!-- no translation found for social_history_lowercase_label (9027541979445736412) -->
-    <skip />
-    <!-- no translation found for social_history_content_description (7187059309389849831) -->
-    <skip />
-    <!-- no translation found for vital_signs_uppercase_label (214938594708280346) -->
-    <skip />
-    <!-- no translation found for vital_signs_lowercase_label (9141304492316454529) -->
-    <skip />
-    <!-- no translation found for vital_signs_content_description (914944352640528612) -->
-    <skip />
+    <string name="vital_signs_uppercase_label" msgid="214938594708280346">"အဓိကကိုယ်တွင်းအင်္ဂါအခြေအနေ လက္ခဏာများ"</string>
+    <string name="vital_signs_lowercase_label" msgid="9141304492316454529">"အဓိကကိုယ်တွင်းအင်္ဂါအခြေအနေ လက္ခဏာများ"</string>
+    <string name="vital_signs_content_description" msgid="914944352640528612">"အဓိကကိုယ်တွင်းအင်္ဂါအခြေအနေ လက္ခဏာများကို ဖတ်ရန်"</string>
     <string name="mindfulness_uppercase_label" msgid="7678646522566275472">"သတိရှိမှု"</string>
     <string name="mindfulness_lowercase_label" msgid="5184488636180881614">"သတိရှိမှု"</string>
     <string name="mindfulness_read_content_description" msgid="739187536826062524">"သတိရှိမှုစက်ရှင် ဒေတာဖတ်ရန်"</string>
@@ -344,29 +344,22 @@
     <string name="permissions_disconnect_dialog_message_history" msgid="3793206180295111081">"<xliff:g id="APP_NAME">%1$s</xliff:g> သည် ယခင်ဒေတာအပါအဝင် Health Connect မှ ဒေတာများကို ဖတ်နိုင် (သို့) ရေးနိုင်တော့မည် မဟုတ်ပါ။\n\n၎င်းသည် ဤအက်ပ်တွင်ရှိနိုင်သော တည်နေရာ၊ ကင်မရာ (သို့) မိုက်ခရိုဖုန်းကဲ့သို့ အခြားခွင့်ပြုချက်များပေါ် သက်ရောက်မှုမရှိပါ။"</string>
     <string name="permissions_disconnect_dialog_message_combined" msgid="4163369526932602203">"<xliff:g id="APP_NAME">%1$s</xliff:g> သည် နောက်ခံတွင်အသုံးပြုသောဒေတာနှင့် ယခင်ဒေတာအပါအဝင် Health Connect မှ ဒေတာများကို ဖတ်နိုင် (သို့) ရေးနိုင်တော့မည် မဟုတ်ပါ။\n\n၎င်းသည် ဤအက်ပ်တွင်ရှိနိုင်သော တည်နေရာ၊ ကင်မရာ (သို့) မိုက်ခရိုဖုန်းကဲ့သို့ အခြားခွင့်ပြုချက်များပေါ် သက်ရောက်မှုမရှိပါ။"</string>
     <string name="permissions_disconnect_dialog_checkbox" msgid="8646951566431872823">"Health Connect မှ <xliff:g id="APP_NAME">%1$s</xliff:g> ဒေတာကိုလည်း ဖျက်ရန်"</string>
-    <!-- no translation found for disconnect_all_health_permissions_title (3995410660376966233) -->
-    <skip />
-    <!-- no translation found for disconnect_all_medical_permissions_title (735315242997370168) -->
-    <skip />
-    <!-- no translation found for disconnect_all_fitness_permissions_title (7612364222525900592) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_no_additional_permissions_dialog_message (211728516196974197) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_and_background_permissions_dialog_message (654533675296670869) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_and_historical_permissions_dialog_message (6743215620789357899) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_and_additional_permissions_dialog_message (6062891741278986209) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_permissions_dialog_checkbox (762880061016391846) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_permissions_success_toast (9010063821116197894) -->
-    <skip />
+    <string name="disconnect_all_health_permissions_title" msgid="3995410660376966233">"ခွင့်ပြုချက်အားလုံး ဖယ်ရှားမလား။"</string>
+    <string name="disconnect_all_medical_permissions_title" msgid="735315242997370168">"ကျန်းမာရေး မှတ်တမ်း ခွင့်ပြုချက်အားလုံးကို ဖယ်ရှားမလား။"</string>
+    <string name="disconnect_all_fitness_permissions_title" msgid="7612364222525900592">"ကျန်းမာကြံ့ခိုင်ရေး ခွင့်ပြုချက်အားလုံးကို ဖယ်ရှားမလား။"</string>
+    <string name="disconnect_all_health_no_additional_permissions_dialog_message" msgid="211728516196974197">"<xliff:g id="APP_NAME">%1$s</xliff:g> သည် Health Connect မှ ဒေတာများကို ဖတ်နိုင် (သို့) ရေးနိုင်တော့မည် မဟုတ်ပါ။\n\n၎င်းသည် ဤအက်ပ်တွင်ရှိနိုင်သော ကင်မရာ၊ မိုက်ခရိုဖုန်း (သို့) တည်နေရာကဲ့သို့ အခြားခွင့်ပြုချက်များပေါ် သက်ရောက်မှုမရှိပါ။"</string>
+    <string name="disconnect_all_health_and_background_permissions_dialog_message" msgid="654533675296670869">"<xliff:g id="APP_NAME">%1$s</xliff:g> သည် နောက်ခံတွင်အသုံးပြုသောဒေတာ အပါအဝင် Health Connect မှ ဒေတာများကို ဖတ်နိုင် (သို့) ရေးနိုင်တော့မည် မဟုတ်ပါ။\n\n၎င်းသည် ဤအက်ပ်တွင်ရှိနိုင်သော ကင်မရာ၊ မိုက်ခရိုဖုန်း (သို့) တည်နေရာကဲ့သို့ အခြားခွင့်ပြုချက်များပေါ် သက်ရောက်မှုမရှိပါ။"</string>
+    <string name="disconnect_all_health_and_historical_permissions_dialog_message" msgid="6743215620789357899">"<xliff:g id="APP_NAME">%1$s</xliff:g> သည် ယခင်ဒေတာ အပါအဝင် Health Connect မှ ဒေတာများကို ဖတ်နိုင် (သို့) ရေးနိုင်တော့မည် မဟုတ်ပါ။\n\n၎င်းသည် ဤအက်ပ်တွင်ရှိနိုင်သော ကင်မရာ၊ မိုက်ခရိုဖုန်း (သို့) တည်နေရာကဲ့သို့ အခြားခွင့်ပြုချက်များအပေါ် သက်ရောက်မှုမရှိပါ။"</string>
+    <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> သည် နောက်ခံတွင်အသုံးပြုသောဒေတာနှင့် ယခင်ဒေတာ အပါအဝင် Health Connect မှ ဒေတာများကို ဖတ်နိုင် (သို့) ရေးနိုင်တော့မည် မဟုတ်ပါ။\n\n၎င်းသည် ဤအက်ပ်တွင်ရှိနိုင်သော ကင်မရာ၊ မိုက်ခရိုဖုန်း (သို့) တည်နေရာကဲ့သို့ အခြားခွင့်ပြုချက်များအပေါ် သက်ရောက်မှုမရှိပါ။"</string>
+    <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Health Connect မှ <xliff:g id="APP_NAME">%1$s</xliff:g> ရှိ ကြံ့ခိုင်မှု ဒေတာနှင့် ကျန်းမာရေး မှတ်တမ်းများကိုလည်း ဖျက်ရန်"</string>
+    <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"ဤအက်ပ်အတွက် ခွင့်ပြုချက်များကို ဖယ်ရှားပြီးပါပြီ"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"နောက်ရက်"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"ရွေးထားသောနေ့"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"ယခင်ရက်"</string>
     <string name="default_error" msgid="7966868260616403475">"တစ်ခုခုမှားသွားသည်။ ထပ်စမ်းကြည့်ပါ။"</string>
     <!-- no translation found for unkwown_resource (7932225227431922125) -->
+    <skip />
+    <!-- no translation found for raw_fhir_title (1295744907036066319) -->
     <skip />
     <!-- no translation found for raw_fhir_open_bracket (7974657451368655325) -->
     <skip />
@@ -394,8 +387,7 @@
     <string name="permissions_disconnect_all_dialog_disconnect" msgid="2134136493310257746">"အားလုံး ဖယ်ရှားရန်"</string>
     <string name="manage_permissions_manage_app_header" msgid="6356348062088358761">"အက်ပ်စီမံခြင်း"</string>
     <string name="see_app_data" msgid="3951030076195119476">"အက်ပ်ဒေတာ ကြည့်ရန်"</string>
-    <!-- no translation found for remove_access_for_this_app (7701101420310711833) -->
-    <skip />
+    <string name="remove_access_for_this_app" msgid="7701101420310711833">"ဤအက်ပ်အတွက် သုံးခွင့်ကို ဖယ်ရှားရန်"</string>
     <string name="delete_app_data" msgid="6890357774873859952">"အက်ပ်ဒေတာ ဖျက်ရန်"</string>
     <string name="inactive_apps_section_title" msgid="7492812973696378690">"အသုံးမပြုသော အက်ပ်များ"</string>
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"ဤအက်ပ်များက သုံးခွင့်မရှိတော့သော်လည်း Health Connect တွင် ဒေတာများ သိမ်းထားသေးသည်"</string>
@@ -463,8 +455,7 @@
     <string name="export_destination_title" msgid="8352929396306002479">"စီစဉ်ထားသောထုတ်ယူမှု သိမ်းရန်နေရာရွေးပါ"</string>
     <string name="export_invalid_storage" msgid="1459055934301871321">"သင့်ဒေတာ ထုတ်ယူရန်အတွက် cloud သိုလှောင်ခန်း အက်ပ်ကို ရွေးပါ"</string>
     <string name="export_default_file_name" msgid="1146984404965754445">"Health Connect"</string>
-    <!-- no translation found for export_default_file_name_with_sequence (2380551038319211752) -->
-    <skip />
+    <string name="export_default_file_name_with_sequence" msgid="2380551038319211752">"Health Connect (<xliff:g id="EXPORT_SEQUENTIAL_NUMBER">%1$s</xliff:g>)"</string>
     <string name="import_confirmation_dialog_title" msgid="1218478436676890997">"ဤဖိုင်ကို ထည့်သွင်းမလား။"</string>
     <string name="import_confirmation_dialog_text" msgid="7274564242039735667">"<xliff:g id="FILE_NAME">%1$s</xliff:g> ကို Health Connect သို့ ထည့်သွင်းပါမည်"</string>
     <string name="import_confirmation_dialog_cancel_button" msgid="4323351978842360895">"မလုပ်တော့"</string>
@@ -507,6 +498,10 @@
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"Play Store သို့ သွားရန်"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"Health Connect စတင်အသုံးပြုခြင်း"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect သည် သင့်စက်ပေါ်ရှိ အက်ပ်အမျိုးမျိုး ရိုးရှင်းစွာစင့်ခ်လုပ်နည်းကို ပေးပြီး သင်၏ကျန်းမာရေးနှင့် ကြံ့ခိုင်ရေးဒေတာကို သိမ်းသည်"</string>
+    <!-- no translation found for onboarding_description_health_records (6816666836571797870) -->
+    <skip />
+    <!-- no translation found for onboarding_description_with_health_connect (8751881078749676542) -->
+    <skip />
     <string name="share_data" msgid="3481932156368883946">"သင့်အက်ပ်များနှင့် ဒေတာမျှဝေရန်"</string>
     <string name="share_data_description" msgid="2919871301634375092">"Health Connect တွင် အက်ပ်တစ်ခုစီက ဖတ်နိုင် (သို့) ရေးနိုင်မည့် ဒေတာကို သင်ရွေးနိုင်သည်"</string>
     <string name="manage_your_settings" msgid="7391184508015127137">"သင့်ဆက်တင်များနှင့် ကိုယ်ရေးအချက်အလက်လုံခြုံမှုကို စီမံရန်"</string>
@@ -551,8 +546,7 @@
     <string name="confirming_question_data_type_from_app_all" msgid="8361163993548510509">"<xliff:g id="APP_DATA">%2$s</xliff:g> က ထည့်ထားသော <xliff:g id="DATA_TYPE">%1$s</xliff:g> ဒေတာအားလုံးကို အပြီးဖျက်မလား။"</string>
     <string name="confirming_question_single_entry" msgid="2064578008447638932">"Health Connect မှ ဤထည့်သွင်းမှုကို အပြီးဖျက်မလား။"</string>
     <string name="confirming_question_message" msgid="2934249835529079545">"ချိတ်ဆက်ထားသည့်အက်ပ်များက Health Connect မှ ဤဒေတာကို သုံးနိုင်တော့မည်မဟုတ်ပါ"</string>
-    <!-- no translation found for confirming_question_message_menstruation (944931041343695373) -->
-    <skip />
+    <string name="confirming_question_message_menstruation" msgid="944931041343695373">"၎င်းက <xliff:g id="START_DATE">%1$s</xliff:g> မှ <xliff:g id="END_DATE">%2$s</xliff:g> အထိ ဓမ္မတာလာခြင်း ထည့်သွင်းမှုအားလုံးကို ဖျက်မည်။"</string>
     <string name="confirming_question_delete_button" msgid="1999996759507959985">"ဖျက်ရန်"</string>
     <string name="confirming_question_go_back_button" msgid="9037523726124648221">"နောက်သို့"</string>
     <string name="delete_dialog_success_got_it_button" msgid="8047812840310612293">"ပြီးပြီ"</string>
