--- a/apk/res/values-nb/strings.xml
+++ b/apk/res/values-nb/strings.xml
@@ -276,51 +276,51 @@
     <string name="allergy_intolerance_uppercase_label" msgid="962905760867412783">"Allergier"</string>
     <string name="allergy_intolerance_lowercase_label" msgid="8705895234297776508">"allergier"</string>
     <string name="allergy_intolerance_content_description" msgid="5938549394285540206">"Lesing av allergier"</string>
+    <!-- no translation found for conditions_uppercase_label (5260404343402770877) -->
+    <skip />
+    <!-- no translation found for conditions_lowercase_label (2678248918552246997) -->
+    <skip />
+    <!-- no translation found for conditions_content_description (3230552343616193829) -->
+    <skip />
     <string name="immunization_uppercase_label" msgid="1467176749064014020">"Vaksinering"</string>
     <string name="immunization_lowercase_label" msgid="6464922369026887687">"vaksinering"</string>
     <string name="immunization_content_description" msgid="2910674919337229803">"Les vaksinering"</string>
-    <!-- no translation found for laboratory_results_uppercase_label (2521886562709901654) -->
+    <string name="laboratory_results_uppercase_label" msgid="2521886562709901654">"Laboratorieresultater"</string>
+    <string name="laboratory_results_lowercase_label" msgid="6437932041744631964">"laboratorieresultater"</string>
+    <string name="laboratory_results_content_description" msgid="5882338877203692484">"Lesing av laboratorieresultater"</string>
+    <string name="medications_uppercase_label" msgid="4783281053427990225">"Medisiner"</string>
+    <string name="medications_lowercase_label" msgid="7808038774503092207">"medisiner"</string>
+    <string name="medications_content_description" msgid="6165382876281780190">"Les medisiner"</string>
+    <!-- no translation found for personal_details_uppercase_label (7241635933310394120) -->
     <skip />
-    <!-- no translation found for laboratory_results_lowercase_label (6437932041744631964) -->
+    <!-- no translation found for personal_details_lowercase_label (1907848447611775151) -->
     <skip />
-    <!-- no translation found for laboratory_results_content_description (5882338877203692484) -->
+    <!-- no translation found for personal_details_content_description (3191211304673909831) -->
     <skip />
-    <!-- no translation found for medications_uppercase_label (4783281053427990225) -->
+    <!-- no translation found for practitioner_details_uppercase_label (2940667649808082510) -->
     <skip />
-    <!-- no translation found for medications_lowercase_label (7808038774503092207) -->
+    <!-- no translation found for practitioner_details_lowercase_label (8195591077717971542) -->
     <skip />
-    <!-- no translation found for medications_content_description (6165382876281780190) -->
+    <!-- no translation found for practitioner_details_content_description (8775396516928504185) -->
     <skip />
-    <!-- no translation found for pregnancy_uppercase_label (5979925175194337864) -->
+    <string name="pregnancy_uppercase_label" msgid="5979925175194337864">"Graviditet"</string>
+    <string name="pregnancy_lowercase_label" msgid="810439290131044517">"graviditet"</string>
+    <string name="pregnancy_content_description" msgid="3436773729243586287">"Lesing av graviditet"</string>
+    <string name="procedures_uppercase_label" msgid="9176087520132593261">"Prosedyrer"</string>
+    <string name="procedures_lowercase_label" msgid="5320804313946273234">"prosedyrer"</string>
+    <string name="procedures_content_description" msgid="1086900373141440005">"Lesing av prosedyrer"</string>
+    <string name="social_history_uppercase_label" msgid="1731364502071035544">"Sosiallogg"</string>
+    <string name="social_history_lowercase_label" msgid="9027541979445736412">"sosiallogg"</string>
+    <string name="social_history_content_description" msgid="7187059309389849831">"Lesing av sosialloggen"</string>
+    <!-- no translation found for visits_uppercase_label (8532619758336375886) -->
     <skip />
-    <!-- no translation found for pregnancy_lowercase_label (810439290131044517) -->
+    <!-- no translation found for visits_lowercase_label (2545887061364564151) -->
     <skip />
-    <!-- no translation found for pregnancy_content_description (3436773729243586287) -->
+    <!-- no translation found for visits_content_description (6336796415049565697) -->
     <skip />
-    <!-- no translation found for problems_uppercase_label (4047882613795113715) -->
-    <skip />
-    <!-- no translation found for problems_lowercase_label (6934298611508910866) -->
-    <skip />
-    <!-- no translation found for problems_content_description (1549418294742668962) -->
-    <skip />
-    <!-- no translation found for procedures_uppercase_label (9176087520132593261) -->
-    <skip />
-    <!-- no translation found for procedures_lowercase_label (5320804313946273234) -->
-    <skip />
-    <!-- no translation found for procedures_content_description (1086900373141440005) -->
-    <skip />
-    <!-- no translation found for social_history_uppercase_label (1731364502071035544) -->
-    <skip />
-    <!-- no translation found for social_history_lowercase_label (9027541979445736412) -->
-    <skip />
-    <!-- no translation found for social_history_content_description (7187059309389849831) -->
-    <skip />
-    <!-- no translation found for vital_signs_uppercase_label (214938594708280346) -->
-    <skip />
-    <!-- no translation found for vital_signs_lowercase_label (9141304492316454529) -->
-    <skip />
-    <!-- no translation found for vital_signs_content_description (914944352640528612) -->
-    <skip />
+    <string name="vital_signs_uppercase_label" msgid="214938594708280346">"Vitale tegn"</string>
+    <string name="vital_signs_lowercase_label" msgid="9141304492316454529">"vitale tegn"</string>
+    <string name="vital_signs_content_description" msgid="914944352640528612">"Lesing av vitale tegn"</string>
     <string name="mindfulness_uppercase_label" msgid="7678646522566275472">"Oppmerksomt nærvær"</string>
     <string name="mindfulness_lowercase_label" msgid="5184488636180881614">"oppmerksomt nærvær"</string>
     <string name="mindfulness_read_content_description" msgid="739187536826062524">"Les oppmerksomt nærvær"</string>
@@ -344,29 +344,22 @@
     <string name="permissions_disconnect_dialog_message_history" msgid="3793206180295111081">"<xliff:g id="APP_NAME">%1$s</xliff:g> kan ikke lenger lese eller skrive data fra Health Connect, inkludert tidligere data.\n\nDette påvirker ikke andre tillatelser appen har, for eksempel posisjon, kamera eller mikrofon."</string>
     <string name="permissions_disconnect_dialog_message_combined" msgid="4163369526932602203">"<xliff:g id="APP_NAME">%1$s</xliff:g> kan ikke lenger lese eller skrive data fra Health Connect, inkludert bakgrunnsdata eller tidligere data.\n\nDette påvirker ikke andre tillatelser appen har, for eksempel posisjon, kamera eller mikrofon."</string>
     <string name="permissions_disconnect_dialog_checkbox" msgid="8646951566431872823">"Slett også <xliff:g id="APP_NAME">%1$s</xliff:g>-data fra Health Connect"</string>
-    <!-- no translation found for disconnect_all_health_permissions_title (3995410660376966233) -->
-    <skip />
-    <!-- no translation found for disconnect_all_medical_permissions_title (735315242997370168) -->
-    <skip />
-    <!-- no translation found for disconnect_all_fitness_permissions_title (7612364222525900592) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_no_additional_permissions_dialog_message (211728516196974197) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_and_background_permissions_dialog_message (654533675296670869) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_and_historical_permissions_dialog_message (6743215620789357899) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_and_additional_permissions_dialog_message (6062891741278986209) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_permissions_dialog_checkbox (762880061016391846) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_permissions_success_toast (9010063821116197894) -->
-    <skip />
+    <string name="disconnect_all_health_permissions_title" msgid="3995410660376966233">"Vil du fjerne alle tillatelser?"</string>
+    <string name="disconnect_all_medical_permissions_title" msgid="735315242997370168">"Vil du fjerne alle tillatelser til helsejournalen?"</string>
+    <string name="disconnect_all_fitness_permissions_title" msgid="7612364222525900592">"Vil du fjerne alle tillatelser for trening og velvære?"</string>
+    <string name="disconnect_all_health_no_additional_permissions_dialog_message" msgid="211728516196974197">"<xliff:g id="APP_NAME">%1$s</xliff:g> kan ikke lenger lese eller skrive data fra Health Connect.\n\nDette påvirker ikke andre tillatelser appen kanskje har, for eksempel kamera, mikrofon eller posisjon."</string>
+    <string name="disconnect_all_health_and_background_permissions_dialog_message" msgid="654533675296670869">"<xliff:g id="APP_NAME">%1$s</xliff:g> kan ikke lenger lese eller skrive data fra Health Connect, inkludert bakgrunnsdata.\n\nDette påvirker ikke andre tillatelser appen kanskje har, for eksempel kamera, mikrofon eller posisjon."</string>
+    <string name="disconnect_all_health_and_historical_permissions_dialog_message" msgid="6743215620789357899">"<xliff:g id="APP_NAME">%1$s</xliff:g> kan ikke lenger lese eller skrive data fra Health Connect, inkludert tidligere data.\n\nDette påvirker ikke andre tillatelser appen kanskje har, for eksempel kamera, mikrofon eller posisjon."</string>
+    <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> kan ikke lenger lese eller skrive data fra Health Connect, inkludert bakgrunnsdata og tidligere data.\n\nDette påvirker ikke andre tillatelser appen kanskje har, for eksempel kamera, mikrofon eller posisjon."</string>
+    <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Slett også treningsdata og helsejournalen fra <xliff:g id="APP_NAME">%1$s</xliff:g> fra Health Connect"</string>
+    <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Fjernet tillatelsene for denne appen"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Neste dag"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Valgt dag"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Forrige dag"</string>
     <string name="default_error" msgid="7966868260616403475">"Noe gikk galt. Prøv igjen."</string>
     <!-- no translation found for unkwown_resource (7932225227431922125) -->
+    <skip />
+    <!-- no translation found for raw_fhir_title (1295744907036066319) -->
     <skip />
     <!-- no translation found for raw_fhir_open_bracket (7974657451368655325) -->
     <skip />
@@ -394,8 +387,7 @@
     <string name="permissions_disconnect_all_dialog_disconnect" msgid="2134136493310257746">"Fjern alle"</string>
     <string name="manage_permissions_manage_app_header" msgid="6356348062088358761">"Administrer appen"</string>
     <string name="see_app_data" msgid="3951030076195119476">"Se appdata"</string>
-    <!-- no translation found for remove_access_for_this_app (7701101420310711833) -->
-    <skip />
+    <string name="remove_access_for_this_app" msgid="7701101420310711833">"Fjern tilgangen for denne appen"</string>
     <string name="delete_app_data" msgid="6890357774873859952">"Slett appdataene"</string>
     <string name="inactive_apps_section_title" msgid="7492812973696378690">"Inaktive apper"</string>
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Disse appene har ikke tilgang lenger, men har fremdeles data lagret i Health Connect"</string>
@@ -463,8 +455,7 @@
     <string name="export_destination_title" msgid="8352929396306002479">"Velg lagringssted for planlagt eksport"</string>
     <string name="export_invalid_storage" msgid="1459055934301871321">"Velg en app for lagring i nettskyen for eksport av data"</string>
     <string name="export_default_file_name" msgid="1146984404965754445">"Health Connect"</string>
-    <!-- no translation found for export_default_file_name_with_sequence (2380551038319211752) -->
-    <skip />
+    <string name="export_default_file_name_with_sequence" msgid="2380551038319211752">"Health Connect (<xliff:g id="EXPORT_SEQUENTIAL_NUMBER">%1$s</xliff:g>)"</string>
     <string name="import_confirmation_dialog_title" msgid="1218478436676890997">"Vil du importere denne filen?"</string>
     <string name="import_confirmation_dialog_text" msgid="7274564242039735667">"<xliff:g id="FILE_NAME">%1$s</xliff:g> blir importert til Health Connect"</string>
     <string name="import_confirmation_dialog_cancel_button" msgid="4323351978842360895">"Avbryt"</string>
@@ -507,6 +498,10 @@
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"Gå til Play Butikk"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"Kom i gang med Health Connect"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect lagrer helse- og treningsdataene dine, slik at du enkelt kan synkronisere de forskjellige appene på enheten"</string>
+    <!-- no translation found for onboarding_description_health_records (6816666836571797870) -->
+    <skip />
+    <!-- no translation found for onboarding_description_with_health_connect (8751881078749676542) -->
+    <skip />
     <string name="share_data" msgid="3481932156368883946">"Del data med appene"</string>
     <string name="share_data_description" msgid="2919871301634375092">"Velg dataene hver app kan lese eller skrive til Health Connect"</string>
     <string name="manage_your_settings" msgid="7391184508015127137">"Innstillinger og personvern"</string>
@@ -551,8 +546,7 @@
     <string name="confirming_question_data_type_from_app_all" msgid="8361163993548510509">"Vil du permanent slette alle dataene om <xliff:g id="DATA_TYPE">%1$s</xliff:g> som er lagt til av <xliff:g id="APP_DATA">%2$s</xliff:g>?"</string>
     <string name="confirming_question_single_entry" msgid="2064578008447638932">"Vil du slette denne oppføringen fra Health Connect permanent?"</string>
     <string name="confirming_question_message" msgid="2934249835529079545">"Tilknyttede apper mister tilgangen til disse dataene fra Health Connect"</string>
-    <!-- no translation found for confirming_question_message_menstruation (944931041343695373) -->
-    <skip />
+    <string name="confirming_question_message_menstruation" msgid="944931041343695373">"Dette sletter alle menstruasjonsoppføringer fra <xliff:g id="START_DATE">%1$s</xliff:g> til <xliff:g id="END_DATE">%2$s</xliff:g>."</string>
     <string name="confirming_question_delete_button" msgid="1999996759507959985">"Slett"</string>
     <string name="confirming_question_go_back_button" msgid="9037523726124648221">"Gå tilbake"</string>
     <string name="delete_dialog_success_got_it_button" msgid="8047812840310612293">"Ferdig"</string>
