--- a/apk/res/values-ne/strings.xml
+++ b/apk/res/values-ne/strings.xml
@@ -267,39 +267,54 @@
     <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"छालाको तापक्रम"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"छालाको तापक्रमसम्बन्धी जानकारी रिड गर्ने"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"छालाको तापक्रमसम्बन्धी जानकारी राइट गर्ने"</string>
-    <!-- no translation found for all_medical_data_uppercase_label (2380759160541898783) -->
-    <skip />
-    <!-- no translation found for all_medical_data_lowercase_label (6293814928992081842) -->
-    <skip />
-    <!-- no translation found for all_medical_data_content_description (4846586780533295022) -->
-    <skip />
+    <string name="all_medical_data_uppercase_label" msgid="2380759160541898783">"सबै स्वास्थ्य अभिलेखहरू"</string>
+    <string name="all_medical_data_lowercase_label" msgid="6293814928992081842">"सबै स्वास्थ्य अभिलेखहरू"</string>
+    <string name="all_medical_data_content_description" msgid="4846586780533295022">"सबै स्वास्थ्य अभिलेखहरू राइट गर्नुहोस्"</string>
     <string name="allergy_intolerance_uppercase_label" msgid="962905760867412783">"एलर्जीहरू"</string>
     <string name="allergy_intolerance_lowercase_label" msgid="8705895234297776508">"एलर्जीहरू"</string>
     <string name="allergy_intolerance_content_description" msgid="5938549394285540206">"एलर्जीहरू रिड गर्नुहोस्"</string>
+    <!-- no translation found for conditions_uppercase_label (5260404343402770877) -->
+    <skip />
+    <!-- no translation found for conditions_lowercase_label (2678248918552246997) -->
+    <skip />
+    <!-- no translation found for conditions_content_description (3230552343616193829) -->
+    <skip />
     <string name="immunization_uppercase_label" msgid="1467176749064014020">"खोप"</string>
     <string name="immunization_lowercase_label" msgid="6464922369026887687">"खोप"</string>
     <string name="immunization_content_description" msgid="2910674919337229803">"खोपसम्बन्धी जानकारी रिड गर्नुहोस्"</string>
     <string name="laboratory_results_uppercase_label" msgid="2521886562709901654">"प्रयोगशालाका परिणामसम्बन्धी जानकारी"</string>
     <string name="laboratory_results_lowercase_label" msgid="6437932041744631964">"प्रयोगशालाका परिणामसम्बन्धी जानकारी"</string>
     <string name="laboratory_results_content_description" msgid="5882338877203692484">"प्रयोगशालाका परिणामहरू रिड गर्नुहोस्"</string>
-    <!-- no translation found for medications_uppercase_label (4783281053427990225) -->
+    <string name="medications_uppercase_label" msgid="4783281053427990225">"औषधि"</string>
+    <string name="medications_lowercase_label" msgid="7808038774503092207">"औषधि"</string>
+    <string name="medications_content_description" msgid="6165382876281780190">"औषधिसम्बन्धी जानकारी रिड गर्नुहोस्"</string>
+    <!-- no translation found for personal_details_uppercase_label (7241635933310394120) -->
     <skip />
-    <!-- no translation found for medications_lowercase_label (7808038774503092207) -->
+    <!-- no translation found for personal_details_lowercase_label (1907848447611775151) -->
     <skip />
-    <!-- no translation found for medications_content_description (6165382876281780190) -->
+    <!-- no translation found for personal_details_content_description (3191211304673909831) -->
+    <skip />
+    <!-- no translation found for practitioner_details_uppercase_label (2940667649808082510) -->
+    <skip />
+    <!-- no translation found for practitioner_details_lowercase_label (8195591077717971542) -->
+    <skip />
+    <!-- no translation found for practitioner_details_content_description (8775396516928504185) -->
     <skip />
     <string name="pregnancy_uppercase_label" msgid="5979925175194337864">"गर्भावस्थासम्बन्धी जानकारी"</string>
     <string name="pregnancy_lowercase_label" msgid="810439290131044517">"गर्भावस्थासम्बन्धी जानकारी"</string>
     <string name="pregnancy_content_description" msgid="3436773729243586287">"गर्भावस्थासम्बन्धी जानकारी रिड गर्नुहोस्"</string>
-    <string name="problems_uppercase_label" msgid="4047882613795113715">"समस्यासम्बन्धी जानकारी"</string>
-    <string name="problems_lowercase_label" msgid="6934298611508910866">"समस्यासम्बन्धी जानकारी"</string>
-    <string name="problems_content_description" msgid="1549418294742668962">"समस्यासम्बन्धी जानकारी रिड गर्नुहोस्"</string>
     <string name="procedures_uppercase_label" msgid="9176087520132593261">"प्रक्रियासम्बन्धी जानकारी"</string>
     <string name="procedures_lowercase_label" msgid="5320804313946273234">"प्रक्रियासम्बन्धी जानकारी"</string>
     <string name="procedures_content_description" msgid="1086900373141440005">"प्रक्रियासम्बन्धी जानकारी रिड गर्नुहोस्"</string>
     <string name="social_history_uppercase_label" msgid="1731364502071035544">"सामाजिक सञ्जालसम्बन्धी जानकारी"</string>
     <string name="social_history_lowercase_label" msgid="9027541979445736412">"सामाजिक सञ्जालसम्बन्धी जानकारी"</string>
     <string name="social_history_content_description" msgid="7187059309389849831">"सामाजिक सञ्जालसम्बन्धी जानकारीको हिस्ट्री रिड गर्नुहोस्"</string>
+    <!-- no translation found for visits_uppercase_label (8532619758336375886) -->
+    <skip />
+    <!-- no translation found for visits_lowercase_label (2545887061364564151) -->
+    <skip />
+    <!-- no translation found for visits_content_description (6336796415049565697) -->
+    <skip />
     <string name="vital_signs_uppercase_label" msgid="214938594708280346">"स्वास्थ्यसम्बन्धी आधारभूत विवरणसम्बन्धी जानकारी"</string>
     <string name="vital_signs_lowercase_label" msgid="9141304492316454529">"स्वास्थ्यसम्बन्धी आधारभूत विवरणसम्बन्धी जानकारी"</string>
     <string name="vital_signs_content_description" msgid="914944352640528612">"स्वास्थ्यसम्बन्धी आधारभूत विवरणसम्बन्धी जानकारी रिड गर्नुहोस्"</string>
@@ -339,18 +354,14 @@
     <string name="navigation_selected_day" msgid="2510843479734091348">"चयन गरिएको दिन"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"अघिल्लो दिन"</string>
     <string name="default_error" msgid="7966868260616403475">"कुनै समस्या आयो। कृपया फेरि प्रयास गर्नुहोस्।"</string>
-    <!-- no translation found for unkwown_resource (7932225227431922125) -->
+    <string name="unkwown_resource" msgid="7932225227431922125">"अज्ञात स्रोत"</string>
+    <!-- no translation found for raw_fhir_title (1295744907036066319) -->
     <skip />
-    <!-- no translation found for raw_fhir_open_bracket (7974657451368655325) -->
-    <skip />
-    <!-- no translation found for raw_fhir_closed_bracket (9084379463440675078) -->
-    <skip />
-    <!-- no translation found for raw_fhir_field_value (369633095565031835) -->
-    <skip />
-    <!-- no translation found for raw_fhir_value (8627152854130338531) -->
-    <skip />
-    <!-- no translation found for raw_fhir_content_description (1491420802097635439) -->
-    <skip />
+    <string name="raw_fhir_open_bracket" msgid="7974657451368655325">"<xliff:g id="PREFIX">%1$s</xliff:g>ओपन ब्राकेट।"</string>
+    <string name="raw_fhir_closed_bracket" msgid="9084379463440675078">"<xliff:g id="PREFIX">%1$s</xliff:g>क्लोज्ड ब्राकेट।"</string>
+    <string name="raw_fhir_field_value" msgid="369633095565031835">"<xliff:g id="PREFIX">%1$s</xliff:g> फिल्ड <xliff:g id="FIELD">%2$s</xliff:g> को मान"</string>
+    <string name="raw_fhir_value" msgid="8627152854130338531">"<xliff:g id="PREFIX">%1$s</xliff:g>: <xliff:g id="VALUE">%2$s</xliff:g>।"</string>
+    <string name="raw_fhir_content_description" msgid="1491420802097635439">"विस्तृत सोर्स कोड: <xliff:g id="SOURCE_CODE">%1$s</xliff:g>"</string>
     <string name="health_permission_header_description" msgid="7497601695462373927">"यो अनुमति दिइएका एपहरूले तपाईंको स्वास्थ्य र तन्दुरुस्तीसम्बन्धी जानकारी रिड तथा राइट गर्न सक्छन्।"</string>
     <string name="connected_apps_text" msgid="1177626440966855831">"Health Connect मा भण्डारण गरिएका डेटा कुन कुन एपलाई प्रयोग गर्न दिने भन्ने कुरा नियन्त्रण गर्नुहोस्। कुनै एपले कुन कुन डेटा रिड वा राइट गर्न सक्छ भन्ने कुरा हेर्न उक्त एपमा ट्याप गर्नुहोस्।"</string>
     <string name="connected_apps_section_title" msgid="2415288099612126258">"डेटा प्रयोग गर्ने अनुमति पाएका एपहरू"</string>
@@ -478,6 +489,10 @@
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"Play स्टोरमा जानुहोस्"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"Health Connect चलाउन थाल्नुहोस्"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect ले तपाईंको स्वास्थ्य र तन्दुरुस्तीसम्बन्धी जानकारी भण्डारण गर्छ र तपाईंलाई आफ्नो डिभाइसमा विभिन्न एपहरू सरल तरिकाले सिंक गर्ने सुविधा दिन्छ"</string>
+    <!-- no translation found for onboarding_description_health_records (6816666836571797870) -->
+    <skip />
+    <!-- no translation found for onboarding_description_with_health_connect (8751881078749676542) -->
+    <skip />
     <string name="share_data" msgid="3481932156368883946">"आफ्ना एपहरूसँग डेटा सेयर गर्नुहोस्"</string>
     <string name="share_data_description" msgid="2919871301634375092">"हरेक एपलाई कुन कुन डेटा Health Connect मा रिड वा राइट गर्न दिने भन्ने कुरा छनौट गर्नुहोस्"</string>
     <string name="manage_your_settings" msgid="7391184508015127137">"आफ्ना सेटिङ मिलाउनुहोस् र गोपनीयता व्यवस्थापन गर्नुहोस्"</string>
@@ -1072,42 +1087,23 @@
     <string name="see_compatible_apps_banner_content" msgid="1940786301699569588">"Health Connect मार्फत <xliff:g id="APP_NAME">%s</xliff:g> सँग सिंक गर्नका निम्ति थप एपहरू भेट्टाउनुहोस्"</string>
     <string name="see_compatible_apps_set_up_button" msgid="8260738204782792905">"एप स्टोरमा हेर्नुहोस्"</string>
     <string name="select_all" msgid="837499881590001166">"सबै चयन गर्नुहोस्"</string>
-    <!-- no translation found for deletion_confirmation_dialog_body (7643182907084645805) -->
-    <skip />
-    <!-- no translation found for all_data_selected_deletion_confirmation_dialog (2103387413531373305) -->
-    <skip />
-    <!-- no translation found for some_data_selected_deletion_confirmation_dialog (2466281529240054537) -->
-    <skip />
-    <!-- no translation found for all_app_data_selected_deletion_confirmation_dialog (1077157006579195958) -->
-    <skip />
-    <!-- no translation found for some_app_data_selected_deletion_confirmation_dialog (5378172524112070270) -->
-    <skip />
-    <!-- no translation found for all_entries_selected_day_deletion_confirmation_dialog (2887646600541520444) -->
-    <skip />
-    <!-- no translation found for all_entries_selected_week_deletion_confirmation_dialog (6759608395185369048) -->
-    <skip />
-    <!-- no translation found for all_entries_selected_month_deletion_confirmation_dialog (6030161837387559132) -->
-    <skip />
-    <!-- no translation found for some_entries_selected_day_deletion_confirmation_dialog (3481363886097542565) -->
-    <skip />
-    <!-- no translation found for some_entries_selected_week_deletion_confirmation_dialog (7150217982297131340) -->
-    <skip />
-    <!-- no translation found for some_entries_selected_month_deletion_confirmation_dialog (3712014725077445591) -->
-    <skip />
-    <!-- no translation found for one_entry_selected_deletion_confirmation_dialog (4642573082594021789) -->
-    <skip />
-    <!-- no translation found for all_app_entries_selected_day_deletion_confirmation_dialog (2342034541791960151) -->
-    <skip />
-    <!-- no translation found for all_app_entries_selected_week_deletion_confirmation_dialog (24289763841770386) -->
-    <skip />
-    <!-- no translation found for all_app_entries_selected_month_deletion_confirmation_dialog (3240581815583269052) -->
-    <skip />
-    <!-- no translation found for some_app_entries_selected_day_deletion_confirmation_dialog (1030347169774815676) -->
-    <skip />
-    <!-- no translation found for some_app_entries_selected_week_deletion_confirmation_dialog (8009352719322914060) -->
-    <skip />
-    <!-- no translation found for some_app_entries_selected_month_deletion_confirmation_dialog (6617805533334875710) -->
-    <skip />
-    <!-- no translation found for one_app_entry_selected_deletion_confirmation_dialog (7101939753210640660) -->
-    <skip />
+    <string name="deletion_confirmation_dialog_body" msgid="7643182907084645805">"कनेक्ट गरिएका एपहरूले अबदेखि Health Connect मा भएको यो जानकारी रिड गर्न सक्ने छैनन्"</string>
+    <string name="all_data_selected_deletion_confirmation_dialog" msgid="2103387413531373305">"सबै जानकारी सदाका लागि मेटाउने हो?"</string>
+    <string name="some_data_selected_deletion_confirmation_dialog" msgid="2466281529240054537">"चयन गरिएका जानकारी सदाका लागि मेटाउने हो?"</string>
+    <string name="all_app_data_selected_deletion_confirmation_dialog" msgid="1077157006579195958">"<xliff:g id="APP_NAME">%s</xliff:g> मा भएका सबै जानकारी सदाका लागि मेटाउने हो?"</string>
+    <string name="some_app_data_selected_deletion_confirmation_dialog" msgid="5378172524112070270">"<xliff:g id="APP_NAME">%s</xliff:g> मा भएका चयन गरिएका जानकारी सदाका लागि मेटाउने हो?"</string>
+    <string name="all_entries_selected_day_deletion_confirmation_dialog" msgid="2887646600541520444">"<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> का सबै इन्ट्रीहरू सदाका लागि मेटाउने हो?"</string>
+    <string name="all_entries_selected_week_deletion_confirmation_dialog" msgid="6759608395185369048">"<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> का सबै इन्ट्रीहरू सदाका लागि मेटाउने हो?"</string>
+    <string name="all_entries_selected_month_deletion_confirmation_dialog" msgid="6030161837387559132">"<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> का सबै इन्ट्रीहरू सदाका लागि मेटाउने हो?"</string>
+    <string name="some_entries_selected_day_deletion_confirmation_dialog" msgid="3481363886097542565">"<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> का चयन गरिएका इन्ट्रीहरू सदाका लागि मेटाउने हो?"</string>
+    <string name="some_entries_selected_week_deletion_confirmation_dialog" msgid="7150217982297131340">"<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> का चयन गरिएका इन्ट्रीहरू सदाका लागि मेटाउने हो?"</string>
+    <string name="some_entries_selected_month_deletion_confirmation_dialog" msgid="3712014725077445591">"<xliff:g id="SELECTED_DATE_RANGE">%1$s</xliff:g> का चयन गरिएका इन्ट्रीहरू सदाका लागि मेटाउने हो?"</string>
+    <string name="one_entry_selected_deletion_confirmation_dialog" msgid="4642573082594021789">"यो इन्ट्री सदाका लागि मेटाउने हो?"</string>
+    <string name="all_app_entries_selected_day_deletion_confirmation_dialog" msgid="2342034541791960151">"<xliff:g id="APP_NAME">%1$s</xliff:g> मा भएका <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> का सबै इन्ट्रीहरू सदाका लागि मेटाउने हो?"</string>
+    <string name="all_app_entries_selected_week_deletion_confirmation_dialog" msgid="24289763841770386">"<xliff:g id="APP_NAME">%1$s</xliff:g> मा भएका <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> का सबै इन्ट्रीहरू सदाका लागि मेटाउने हो?"</string>
+    <string name="all_app_entries_selected_month_deletion_confirmation_dialog" msgid="3240581815583269052">"<xliff:g id="APP_NAME">%1$s</xliff:g> मा भएका <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> का सबै इन्ट्रीहरू सदाका लागि मेटाउने हो?"</string>
+    <string name="some_app_entries_selected_day_deletion_confirmation_dialog" msgid="1030347169774815676">"<xliff:g id="APP_NAME">%1$s</xliff:g> मा भएका <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> का चयन गरिएका इन्ट्रीहरू सदाका लागि मेटाउने हो?"</string>
+    <string name="some_app_entries_selected_week_deletion_confirmation_dialog" msgid="8009352719322914060">"<xliff:g id="APP_NAME">%1$s</xliff:g> मा भएका <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> का चयन गरिएका इन्ट्रीहरू सदाका लागि मेटाउने हो?"</string>
+    <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"<xliff:g id="APP_NAME">%1$s</xliff:g> मा भएका <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> का चयन गरिएका इन्ट्रीहरू सदाका लागि मेटाउने हो?"</string>
+    <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"<xliff:g id="APP_NAME">%s</xliff:g> मा भएको यो इन्ट्री सदाका लागि मेटाउने हो?"</string>
 </resources>
