--- a/apk/res/values-pl/strings.xml
+++ b/apk/res/values-pl/strings.xml
@@ -276,30 +276,48 @@
     <string name="allergy_intolerance_uppercase_label" msgid="962905760867412783">"Alergie"</string>
     <string name="allergy_intolerance_lowercase_label" msgid="8705895234297776508">"alergie"</string>
     <string name="allergy_intolerance_content_description" msgid="5938549394285540206">"Odczytywanie informacji o alergiach"</string>
+    <!-- no translation found for conditions_uppercase_label (5260404343402770877) -->
+    <skip />
+    <!-- no translation found for conditions_lowercase_label (2678248918552246997) -->
+    <skip />
+    <!-- no translation found for conditions_content_description (3230552343616193829) -->
+    <skip />
     <string name="immunization_uppercase_label" msgid="1467176749064014020">"Uodpornienie"</string>
     <string name="immunization_lowercase_label" msgid="6464922369026887687">"uodpornienie"</string>
     <string name="immunization_content_description" msgid="2910674919337229803">"Odczytuj dane o uodpornieniu"</string>
     <string name="laboratory_results_uppercase_label" msgid="2521886562709901654">"Wyniki badań laboratoryjnych"</string>
     <string name="laboratory_results_lowercase_label" msgid="6437932041744631964">"wyniki badań laboratoryjnych"</string>
     <string name="laboratory_results_content_description" msgid="5882338877203692484">"Odczytaj wyniki badań laboratoryjnych"</string>
-    <!-- no translation found for medications_uppercase_label (4783281053427990225) -->
+    <string name="medications_uppercase_label" msgid="4783281053427990225">"Leki"</string>
+    <string name="medications_lowercase_label" msgid="7808038774503092207">"leki"</string>
+    <string name="medications_content_description" msgid="6165382876281780190">"Odczytaj dane o lekach"</string>
+    <!-- no translation found for personal_details_uppercase_label (7241635933310394120) -->
     <skip />
-    <!-- no translation found for medications_lowercase_label (7808038774503092207) -->
+    <!-- no translation found for personal_details_lowercase_label (1907848447611775151) -->
     <skip />
-    <!-- no translation found for medications_content_description (6165382876281780190) -->
+    <!-- no translation found for personal_details_content_description (3191211304673909831) -->
+    <skip />
+    <!-- no translation found for practitioner_details_uppercase_label (2940667649808082510) -->
+    <skip />
+    <!-- no translation found for practitioner_details_lowercase_label (8195591077717971542) -->
+    <skip />
+    <!-- no translation found for practitioner_details_content_description (8775396516928504185) -->
     <skip />
     <string name="pregnancy_uppercase_label" msgid="5979925175194337864">"Ciąża"</string>
     <string name="pregnancy_lowercase_label" msgid="810439290131044517">"ciąża"</string>
     <string name="pregnancy_content_description" msgid="3436773729243586287">"Odczytaj dane o ciąży"</string>
-    <string name="problems_uppercase_label" msgid="4047882613795113715">"Problemy"</string>
-    <string name="problems_lowercase_label" msgid="6934298611508910866">"problemy"</string>
-    <string name="problems_content_description" msgid="1549418294742668962">"Zapoznaj się z problemami"</string>
     <string name="procedures_uppercase_label" msgid="9176087520132593261">"Procedury"</string>
     <string name="procedures_lowercase_label" msgid="5320804313946273234">"procedury"</string>
     <string name="procedures_content_description" msgid="1086900373141440005">"Odczytaj procedury"</string>
     <string name="social_history_uppercase_label" msgid="1731364502071035544">"Historia społeczna"</string>
     <string name="social_history_lowercase_label" msgid="9027541979445736412">"historia społeczna"</string>
     <string name="social_history_content_description" msgid="7187059309389849831">"Odczytaj historię społeczną"</string>
+    <!-- no translation found for visits_uppercase_label (8532619758336375886) -->
+    <skip />
+    <!-- no translation found for visits_lowercase_label (2545887061364564151) -->
+    <skip />
+    <!-- no translation found for visits_content_description (6336796415049565697) -->
+    <skip />
     <string name="vital_signs_uppercase_label" msgid="214938594708280346">"Parametry życiowe"</string>
     <string name="vital_signs_lowercase_label" msgid="9141304492316454529">"parametry życiowe"</string>
     <string name="vital_signs_content_description" msgid="914944352640528612">"Odczytaj parametry życiowe"</string>
@@ -341,6 +359,7 @@
     <string name="default_error" msgid="7966868260616403475">"Coś poszło nie tak. Spróbuj ponownie."</string>
     <!-- no translation found for unkwown_resource (7932225227431922125) -->
     <skip />
+    <string name="raw_fhir_title" msgid="1295744907036066319">"Dane źródłowe"</string>
     <!-- no translation found for raw_fhir_open_bracket (7974657451368655325) -->
     <skip />
     <!-- no translation found for raw_fhir_closed_bracket (9084379463440675078) -->
@@ -478,6 +497,10 @@
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"Otwórz Sklep Play"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"Pierwsze kroki w Health Connect"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect przechowuje Twoje dane o zdrowiu i aktywności fizycznej i jest prostym sposobem na synchronizację danych z różnych aplikacji na urządzeniu"</string>
+    <!-- no translation found for onboarding_description_health_records (6816666836571797870) -->
+    <skip />
+    <!-- no translation found for onboarding_description_with_health_connect (8751881078749676542) -->
+    <skip />
     <string name="share_data" msgid="3481932156368883946">"Udostępniaj dane aplikacjom"</string>
     <string name="share_data_description" msgid="2919871301634375092">"Wybierz dane, jakie każda aplikacja będzie mogła odczytywać i zapisywać w Health Connect"</string>
     <string name="manage_your_settings" msgid="7391184508015127137">"Zarządzaj ustawieniami i prywatnością"</string>
