--- a/apk/res/values-vi/strings.xml
+++ b/apk/res/values-vi/strings.xml
@@ -276,51 +276,51 @@
     <string name="allergy_intolerance_uppercase_label" msgid="962905760867412783">"Dị ứng"</string>
     <string name="allergy_intolerance_lowercase_label" msgid="8705895234297776508">"dị ứng"</string>
     <string name="allergy_intolerance_content_description" msgid="5938549394285540206">"Đọc dữ liệu về tình trạng dị ứng"</string>
+    <!-- no translation found for conditions_uppercase_label (5260404343402770877) -->
+    <skip />
+    <!-- no translation found for conditions_lowercase_label (2678248918552246997) -->
+    <skip />
+    <!-- no translation found for conditions_content_description (3230552343616193829) -->
+    <skip />
     <string name="immunization_uppercase_label" msgid="1467176749064014020">"Dữ liệu tiêm chủng"</string>
     <string name="immunization_lowercase_label" msgid="6464922369026887687">"dữ liệu tiêm chủng"</string>
     <string name="immunization_content_description" msgid="2910674919337229803">"Đọc dữ liệu tiêm chủng"</string>
-    <!-- no translation found for laboratory_results_uppercase_label (2521886562709901654) -->
+    <string name="laboratory_results_uppercase_label" msgid="2521886562709901654">"Kết quả xét nghiệm"</string>
+    <string name="laboratory_results_lowercase_label" msgid="6437932041744631964">"kết quả xét nghiệm"</string>
+    <string name="laboratory_results_content_description" msgid="5882338877203692484">"Đọc kết quả xét nghiệm"</string>
+    <string name="medications_uppercase_label" msgid="4783281053427990225">"Thuốc"</string>
+    <string name="medications_lowercase_label" msgid="7808038774503092207">"thuốc"</string>
+    <string name="medications_content_description" msgid="6165382876281780190">"Đọc dữ liệu về thuốc"</string>
+    <!-- no translation found for personal_details_uppercase_label (7241635933310394120) -->
     <skip />
-    <!-- no translation found for laboratory_results_lowercase_label (6437932041744631964) -->
+    <!-- no translation found for personal_details_lowercase_label (1907848447611775151) -->
     <skip />
-    <!-- no translation found for laboratory_results_content_description (5882338877203692484) -->
+    <!-- no translation found for personal_details_content_description (3191211304673909831) -->
     <skip />
-    <!-- no translation found for medications_uppercase_label (4783281053427990225) -->
+    <!-- no translation found for practitioner_details_uppercase_label (2940667649808082510) -->
     <skip />
-    <!-- no translation found for medications_lowercase_label (7808038774503092207) -->
+    <!-- no translation found for practitioner_details_lowercase_label (8195591077717971542) -->
     <skip />
-    <!-- no translation found for medications_content_description (6165382876281780190) -->
+    <!-- no translation found for practitioner_details_content_description (8775396516928504185) -->
     <skip />
-    <!-- no translation found for pregnancy_uppercase_label (5979925175194337864) -->
+    <string name="pregnancy_uppercase_label" msgid="5979925175194337864">"Thai kỳ"</string>
+    <string name="pregnancy_lowercase_label" msgid="810439290131044517">"thai kỳ"</string>
+    <string name="pregnancy_content_description" msgid="3436773729243586287">"Đọc dữ liệu về thai kỳ"</string>
+    <string name="procedures_uppercase_label" msgid="9176087520132593261">"Thủ thuật y tế"</string>
+    <string name="procedures_lowercase_label" msgid="5320804313946273234">"thủ thuật y tế"</string>
+    <string name="procedures_content_description" msgid="1086900373141440005">"Đọc dữ liệu về thủ thuật y tế"</string>
+    <string name="social_history_uppercase_label" msgid="1731364502071035544">"Hoạt động trên mạng xã hội"</string>
+    <string name="social_history_lowercase_label" msgid="9027541979445736412">"hoạt động trên mạng xã hội"</string>
+    <string name="social_history_content_description" msgid="7187059309389849831">"Đọc dữ liệu về hoạt động trên mạng xã hội"</string>
+    <!-- no translation found for visits_uppercase_label (8532619758336375886) -->
     <skip />
-    <!-- no translation found for pregnancy_lowercase_label (810439290131044517) -->
+    <!-- no translation found for visits_lowercase_label (2545887061364564151) -->
     <skip />
-    <!-- no translation found for pregnancy_content_description (3436773729243586287) -->
+    <!-- no translation found for visits_content_description (6336796415049565697) -->
     <skip />
-    <!-- no translation found for problems_uppercase_label (4047882613795113715) -->
-    <skip />
-    <!-- no translation found for problems_lowercase_label (6934298611508910866) -->
-    <skip />
-    <!-- no translation found for problems_content_description (1549418294742668962) -->
-    <skip />
-    <!-- no translation found for procedures_uppercase_label (9176087520132593261) -->
-    <skip />
-    <!-- no translation found for procedures_lowercase_label (5320804313946273234) -->
-    <skip />
-    <!-- no translation found for procedures_content_description (1086900373141440005) -->
-    <skip />
-    <!-- no translation found for social_history_uppercase_label (1731364502071035544) -->
-    <skip />
-    <!-- no translation found for social_history_lowercase_label (9027541979445736412) -->
-    <skip />
-    <!-- no translation found for social_history_content_description (7187059309389849831) -->
-    <skip />
-    <!-- no translation found for vital_signs_uppercase_label (214938594708280346) -->
-    <skip />
-    <!-- no translation found for vital_signs_lowercase_label (9141304492316454529) -->
-    <skip />
-    <!-- no translation found for vital_signs_content_description (914944352640528612) -->
-    <skip />
+    <string name="vital_signs_uppercase_label" msgid="214938594708280346">"Dấu hiệu sinh tồn"</string>
+    <string name="vital_signs_lowercase_label" msgid="9141304492316454529">"dấu hiệu sinh tồn"</string>
+    <string name="vital_signs_content_description" msgid="914944352640528612">"Đọc dữ liệu về các dấu hiệu sinh tồn"</string>
     <string name="mindfulness_uppercase_label" msgid="7678646522566275472">"Chánh niệm"</string>
     <string name="mindfulness_lowercase_label" msgid="5184488636180881614">"chánh niệm"</string>
     <string name="mindfulness_read_content_description" msgid="739187536826062524">"Đọc dữ liệu về buổi tập chánh niệm"</string>
@@ -344,29 +344,22 @@
     <string name="permissions_disconnect_dialog_message_history" msgid="3793206180295111081">"<xliff:g id="APP_NAME">%1$s</xliff:g> sẽ không thể đọc hoặc ghi bất kỳ dữ liệu nào từ Health Connect được nữa.\n\nĐiều này không ảnh hưởng đến những quyền khác mà ứng dụng này có thể có (chẳng hạn như quyền truy cập thông tin vị trí, camera hoặc micrô)."</string>
     <string name="permissions_disconnect_dialog_message_combined" msgid="4163369526932602203">"<xliff:g id="APP_NAME">%1$s</xliff:g> sẽ không thể đọc hoặc ghi bất kỳ dữ liệu nào từ Health Connect được nữa, kể cả dữ liệu nền và dữ liệu trước đây.\n\nĐiều này không ảnh hưởng đến những quyền khác mà ứng dụng này có thể có (chẳng hạn như quyền truy cập thông tin vị trí, camera hoặc micrô)."</string>
     <string name="permissions_disconnect_dialog_checkbox" msgid="8646951566431872823">"Đồng thời xoá dữ liệu của <xliff:g id="APP_NAME">%1$s</xliff:g> khỏi Health Connect"</string>
-    <!-- no translation found for disconnect_all_health_permissions_title (3995410660376966233) -->
-    <skip />
-    <!-- no translation found for disconnect_all_medical_permissions_title (735315242997370168) -->
-    <skip />
-    <!-- no translation found for disconnect_all_fitness_permissions_title (7612364222525900592) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_no_additional_permissions_dialog_message (211728516196974197) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_and_background_permissions_dialog_message (654533675296670869) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_and_historical_permissions_dialog_message (6743215620789357899) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_and_additional_permissions_dialog_message (6062891741278986209) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_permissions_dialog_checkbox (762880061016391846) -->
-    <skip />
-    <!-- no translation found for disconnect_all_health_permissions_success_toast (9010063821116197894) -->
-    <skip />
+    <string name="disconnect_all_health_permissions_title" msgid="3995410660376966233">"Xoá tất cả các quyền?"</string>
+    <string name="disconnect_all_medical_permissions_title" msgid="735315242997370168">"Xoá tất cả các quyền đối với hồ sơ sức khoẻ?"</string>
+    <string name="disconnect_all_fitness_permissions_title" msgid="7612364222525900592">"Xoá mọi quyền sử dụng dữ liệu về thể dục và sức khoẻ?"</string>
+    <string name="disconnect_all_health_no_additional_permissions_dialog_message" msgid="211728516196974197">"<xliff:g id="APP_NAME">%1$s</xliff:g> sẽ không thể đọc hoặc ghi dữ liệu từ Health Connect nữa.\n\nĐiều này không ảnh hưởng đến các quyền khác mà ứng dụng này có thể có, chẳng hạn như quyền truy cập thông tin vị trí, camera hoặc micrô."</string>
+    <string name="disconnect_all_health_and_background_permissions_dialog_message" msgid="654533675296670869">"<xliff:g id="APP_NAME">%1$s</xliff:g> sẽ không thể đọc hoặc ghi dữ liệu từ Health Connect nữa, kể cả dữ liệu nền.\n\nĐiều này không ảnh hưởng đến những quyền khác mà ứng dụng này có thể có, chẳng hạn như quyền truy cập thông tin vị trí, camera hoặc micrô."</string>
+    <string name="disconnect_all_health_and_historical_permissions_dialog_message" msgid="6743215620789357899">"<xliff:g id="APP_NAME">%1$s</xliff:g> sẽ không thể đọc hoặc ghi dữ liệu từ Health Connect nữa, kể cả dữ liệu trước đây.\n\nĐiều này không ảnh hưởng đến những quyền khác mà ứng dụng này có thể có, chẳng hạn như quyền truy cập thông tin vị trí, camera hoặc micrô."</string>
+    <string name="disconnect_all_health_and_additional_permissions_dialog_message" msgid="6062891741278986209">"<xliff:g id="APP_NAME">%1$s</xliff:g> sẽ không thể đọc hoặc ghi dữ liệu từ Health Connect nữa, kể cả dữ liệu nền và dữ liệu trước đây.\n\nĐiều này không ảnh hưởng đến những quyền khác mà ứng dụng này có thể có, chẳng hạn như quyền truy cập thông tin vị trí, camera hoặc micrô."</string>
+    <string name="disconnect_all_health_permissions_dialog_checkbox" msgid="762880061016391846">"Đồng thời xoá dữ liệu về hoạt động thể dục và hồ sơ sức khoẻ của <xliff:g id="APP_NAME">%1$s</xliff:g> khỏi Health Connect"</string>
+    <string name="disconnect_all_health_permissions_success_toast" msgid="9010063821116197894">"Đã xoá quyền của ứng dụng này"</string>
     <string name="navigation_next_day" msgid="8853443471183944219">"Ngày tiếp theo"</string>
     <string name="navigation_selected_day" msgid="2510843479734091348">"Ngày đã chọn"</string>
     <string name="navigation_previous_day" msgid="718353386484938584">"Ngày hôm trước"</string>
     <string name="default_error" msgid="7966868260616403475">"Đã xảy ra lỗi. Vui lòng thử lại."</string>
     <!-- no translation found for unkwown_resource (7932225227431922125) -->
+    <skip />
+    <!-- no translation found for raw_fhir_title (1295744907036066319) -->
     <skip />
     <!-- no translation found for raw_fhir_open_bracket (7974657451368655325) -->
     <skip />
@@ -394,8 +387,7 @@
     <string name="permissions_disconnect_all_dialog_disconnect" msgid="2134136493310257746">"Xoá tất cả"</string>
     <string name="manage_permissions_manage_app_header" msgid="6356348062088358761">"Quản lý ứng dụng"</string>
     <string name="see_app_data" msgid="3951030076195119476">"Xem dữ liệu ứng dụng"</string>
-    <!-- no translation found for remove_access_for_this_app (7701101420310711833) -->
-    <skip />
+    <string name="remove_access_for_this_app" msgid="7701101420310711833">"Xoá quyền truy cập của ứng dụng này"</string>
     <string name="delete_app_data" msgid="6890357774873859952">"Xoá dữ liệu ứng dụng"</string>
     <string name="inactive_apps_section_title" msgid="7492812973696378690">"Ứng dụng không hoạt động"</string>
     <string name="inactive_apps_section_message" msgid="2610789262055974739">"Các ứng dụng này không còn quyền truy cập nhưng vẫn có dữ liệu được lưu trữ trong Health Connect"</string>
@@ -463,8 +455,7 @@
     <string name="export_destination_title" msgid="8352929396306002479">"Chọn nơi sẽ lưu dữ liệu xuất theo lịch"</string>
     <string name="export_invalid_storage" msgid="1459055934301871321">"Vui lòng chọn một ứng dụng bộ nhớ trên đám mây để xuất dữ liệu của bạn"</string>
     <string name="export_default_file_name" msgid="1146984404965754445">"Health Connect"</string>
-    <!-- no translation found for export_default_file_name_with_sequence (2380551038319211752) -->
-    <skip />
+    <string name="export_default_file_name_with_sequence" msgid="2380551038319211752">"Health Connect (<xliff:g id="EXPORT_SEQUENTIAL_NUMBER">%1$s</xliff:g>)"</string>
     <string name="import_confirmation_dialog_title" msgid="1218478436676890997">"Nhập tệp này?"</string>
     <string name="import_confirmation_dialog_text" msgid="7274564242039735667">"<xliff:g id="FILE_NAME">%1$s</xliff:g> sẽ được nhập vào Health Connect"</string>
     <string name="import_confirmation_dialog_cancel_button" msgid="4323351978842360895">"Huỷ"</string>
@@ -507,6 +498,10 @@
     <string name="export_import_go_to_play_store_text" msgid="3210733429377429794">"Chuyển tới Cửa hàng Play"</string>
     <string name="onboarding_title" msgid="8550656211291180188">"Làm quen với Health Connect"</string>
     <string name="onboarding_description" msgid="3479157507808350452">"Health Connect lưu trữ dữ liệu về sức khoẻ và hoạt động thể dục của bạn, qua đó mang lại cho bạn một cách đơn giản để đồng bộ hoá nhiều ứng dụng trên thiết bị"</string>
+    <!-- no translation found for onboarding_description_health_records (6816666836571797870) -->
+    <skip />
+    <!-- no translation found for onboarding_description_with_health_connect (8751881078749676542) -->
+    <skip />
     <string name="share_data" msgid="3481932156368883946">"Chia sẻ dữ liệu với ứng dụng"</string>
     <string name="share_data_description" msgid="2919871301634375092">"Chọn dữ liệu mà mỗi ứng dụng có thể đọc hoặc ghi vào Health Connect"</string>
     <string name="manage_your_settings" msgid="7391184508015127137">"Quản lý chế độ cài đặt và quyền riêng tư"</string>
@@ -551,8 +546,7 @@
     <string name="confirming_question_data_type_from_app_all" msgid="8361163993548510509">"Xoá vĩnh viễn mọi dữ liệu về <xliff:g id="DATA_TYPE">%1$s</xliff:g> mà <xliff:g id="APP_DATA">%2$s</xliff:g> đã thêm vào?"</string>
     <string name="confirming_question_single_entry" msgid="2064578008447638932">"Xoá vĩnh viễn mục này khỏi Health Connect?"</string>
     <string name="confirming_question_message" msgid="2934249835529079545">"Các ứng dụng đã kết nối sẽ không thể truy cập được vào dữ liệu này từ Health Connect nữa"</string>
-    <!-- no translation found for confirming_question_message_menstruation (944931041343695373) -->
-    <skip />
+    <string name="confirming_question_message_menstruation" msgid="944931041343695373">"Thao tác này sẽ xoá tất cả mục dữ liệu về kỳ kinh nguyệt từ <xliff:g id="START_DATE">%1$s</xliff:g> đến <xliff:g id="END_DATE">%2$s</xliff:g>."</string>
     <string name="confirming_question_delete_button" msgid="1999996759507959985">"Xoá"</string>
     <string name="confirming_question_go_back_button" msgid="9037523726124648221">"Quay lại"</string>
     <string name="delete_dialog_success_got_it_button" msgid="8047812840310612293">"Xong"</string>
